--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15.md
@@ -9,396 +9,396 @@ title = "१५"
 स्वयमौद्वाहिकं गेहं तस्मै रामाय ते नमः ॥  
 कृतसीतापरित्यागः स रत्नाकरमेखलाम् ।  
 बुभुजे पृथिवीपालः पृथिवीमेव केवलम् ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 लवणेन विलुप्तेज्यास्तामिस्नेण तमभ्ययुः ।  
 मुनयो यमुनाभाजः शरण्यं शरणार्थिनः ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवेक्ष्य रामं ते तस्मिन्न प्रजह्रुः स्वतेजसा ।  
 त्राणाभावे हि शापास्त्राः कुर्वन्ति तपसो व्ययम् ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रतिशुश्राव काकुत्स्थस्तेभ्यो विघ्नप्रतिक्रियाम् ।  
 धर्मसंरक्षणार्थैव प्रवृत्तिर्भुवि शार्ङ्गिणः ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ते रामाय वधोपायमाचख्युर्विबुधद्विषः ।  
 दुर्जयो लवणः शूली विशूलः प्रार्थ्यतामिति ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आदिदेशाथ शत्रुघ्ने तेषां क्षेमाय राघवः ।  
 करिष्यन्निव नामास्य यथार्थमरिनिग्रहात् ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रामस्य स्वयमप्रयाणे हेतुमाह-  
 यः कश्चन रघूणां हि परमेकः परंतपः ।  
 अपवाद इवोत्सर्गं व्यावर्तयितुमीश्वरः ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अग्रजेन प्रयुक्ताशीस्ततो दाशरथी रथी ।  
 ययौ वनस्थलीः पश्यन्पुष्पिताः सुरभीरभीः ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रामादेशादनुगता सेना तस्यार्थसिद्धये ।  
 पश्चादध्ययनार्थस्य धातोरधिरिवाभवत् ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आदिष्टवर्त्मा मुनिभिः स गच्छंस्तपतां वरः ।  
 विरराज रथप्रष्ठैर्वालखिल्यैरिवांशुमान् ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/100.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/100.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य मार्गवशादेका बभूव वसतिर्यतः ।  
 रथस्वनोत्कण्ठमृगे वाल्मीकीये तपोवने ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/11.md"  newLevelForH1="4" includeTitle="true"> </div>
  
 तपःप्रभावसिद्धाभिर्विशेषप्रतिपत्तिभिः ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यामेवस्य यामिन्यामन्तर्वत्नी प्रजावती ।  
 सुतावसूत संपन्नौ कोशदण्डाविव क्षितिः ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संतानश्रवणाद्भ्रातुः सौमित्रिः सौमनस्यवान् ।  
 प्राञ्जलिर्मुनिमामन्त्र्य प्रातर्युक्तरथो ययौ ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स च प्राप मधूपघ्नं कुम्भीनस्याशअच कुक्षिजः ।  
 वनात्करमिवादाय सत्त्वराशिमुपस्थितः ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 धूमधूम्रो वसागन्धी ज्वालाबभ्रुशिरोरुहः ।  
 क्रव्याद्गणपरीवारश्चिताग्निरिव जंगमः ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अपशूलं तमासाद्य लवणं लक्ष्मणानुजः ।  
 रुरोध संमुखीनो हि जयो रन्ध्रप्रहारिणाम् ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नातिपर्याप्तमालक्ष्य मत्कुक्षेरद्य भोजनम् ।  
 दिष्ट्या त्वमसि मे धात्रा भीतेनेवोपपादितः ॥ 18 ॥  
 इति संतर्ज्य शत्रुघ्नं राक्षसस्तज्जिघांसया ।  
 प्रांशुमुत्पाटयामास मुस्तास्तम्बमिव द्रुमम् ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/19.md"  newLevelForH1="4" includeTitle="true"> </div>
 
 सौमित्रेर्निशितैर्बाणैरन्तरा शकलीकृतः ।  
 गात्रं पुष्परजः प्राप न शाखी नैर्ऋतेरितः ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विनाशात्तस्य वृक्षस्य रक्षस्तस्मै महोपलम् ।  
 प्रजिघाय कृतान्तस्य मुष्टिं पृथगिव स्थितम् ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ऐन्द्रमस्त्रमुपादाय शत्रुघ्नेन स ताडितः ।  
 सिकतात्वादपि परां प्रपेदे परमाणुताम् ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमुपाद्रवदुद्यम्य दक्षिणं दोर्निशाचरः ।  
 एकताल इवोत्पातपवनप्रेरितो गिरिः ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कार्ष्णेन पत्रिणा शत्रुः स भिन्नहृदयः पतन् ।  
 अनिनाय भुवः कम्पं जहाराश्रमवासिनाम् ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वयसां पङ्क्तयः पेतुर्हतस्योपरि विद्विषः ।  
 तत्प्रतिद्वन्द्विनो मूर्धअनि दिव्याः कुसुमवृष्टयः ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स हत्वा लवणं वीरस्तदा मेने महौजसः ।  
 भ्रातुः सोदर्यमात्मानमिन्द्रजिद्वधशोभिनः ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य संस्तूयमानस्य चरितार्थैस्तपस्विभिः ।  
 शुशुभे विक्रमोदग्नं व्रीडयावनतं शिरः ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपकूलं स कालिन्द्याः पुरीं पौरुषभूषणः ।  
 निर्ममे निर्ममोऽर्थेषु मथुरां मधुराकृतिः ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 या सौराज्यप्रकाशाभिर्बभौ पौरविभूतिभिः ।  
 स्वर्गाभिष्यन्दवमनं कृत्वेवोपनिवेशिता ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्र सौधगतः पश्यन्यमुनां चक्रवाकिनीम् ।  
 हेमभक्तिमतीं भूमेः प्रवेणीमिव पिप्रिये ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति रामसंतानवृत्तान्तमाह-  
 सखा दशरथस्यापि जनकस्य च मन्त्रकृत् ।  
 संचस्कारोभयप्रीत्या मैथिलेयौ यथाविधइ ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तौ कुशलवोन्मृष्टगर्भक्लेदौ तदाख्यया ।  
 कविः कुळलवावेव चकार किल नामतः ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 साङ्गं च वेदमध्याप्य किंचिदुत्क्रान्तशैशवौ ।  
 स्वकृतिं गापयामास कविप्रथमपद्धतिम् ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रामस्य मधुरं वृत्तं गायन्तौ मातुरग्रतः ।  
 तद्वियोगव्यथां किंचिच्छिथिलीचक्रतुः सुतौ ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इतरेऽपि रघोर्वंश्यास्त्रयस्त्रेताग्नितेजसः ।  
 तद्योगात्पतिवत्नीषु पत्नीष्वासन्द्विसूनवः ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शत्रुघातिनि शत्रुघ्नः सुबाहौ च बहुश्रुते ।  
 मथुराविदिशे सून्वोर्निदधे पूर्वजोत्सुकः ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भूयस्तपोव्ययो मा भूद्वाल्मीकेरिति सोऽत्यगात् ।  
 मैथिलीतनयोद्गीतनिःस्पन्दमृगमाश्रमम् ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वशी विवेश चायोध्यां रथ्यासंस्कारशोभिनीम् ।  
 लवणस्य वधात्पौरैरीक्षितोऽत्यन्तगौरवम् ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स ददर्श सभामध्ये सभासद्भिरुपस्थितम् ।  
 रामं सीतापरित्यागादसामान्यपतिं भुवः ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमभ्यनन्दत्प्रणतं लवणान्तकमग्रजः ।  
 कालनेमिवधात्प्रीतस्तुराषाडिव शार्ङ्गिणम् ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/40.md"  newLevelForH1="4" includeTitle="true"> </div>
    
 
 स पृष्टः सर्वतो वार्तमाख्यद्राज्ञे न संततिम् ।  
 प्रत्यर्पयिष्यतः काले करेराद्यस्य शासनात् ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ जानपदो विप्रः शिशुमप्राप्तयौवनम् ।  
 अवतार्याङ्कशय्यास्थं द्वारि चक्रन्द भूपतेः ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शोचनीयासि वसुधे! या त्वं दशरथाञ्युता ।  
 रामहस्तमनुप्राप्य कष्टात्कष्टतरं गता ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्रुत्वा तस्य शुचो हेतुं गोप्ता जिह्नाय राघवः ।  
 न ह्यकालभवो मृत्युरिक्ष्वाकुपदमस्पृशत् ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स मुहूर्तं क्षमस्वेति द्विजमाश्वास्य दुःखितम् ।  
 यानं सस्मार कौबेरं वैवस्वतजिगीषया ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आत्तशस्त्रस्तदध्यास्य प्रस्थितः स रघूद्वहः ।  
 उञ्चचार पुरस्तस्य गूढरूपा सरस्वती ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 राजन्! प्रजासु ते कश्चिदपचारः प्रवर्तते ।  
 तमस्विष्य प्रशमयेर्भवितासि ततः कृती ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 इत्याप्तवचनाद्रामो विनेष्यन्वर्णविक्रियाम् ।  
 दिशः पपात पत्रेण वेगनिष्कम्पकेतुना ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ धूमाभिताम्राक्षं वृक्षशाखावलम्बिनम् ।  
 ददर्श कंचिदैक्ष्वाकस्तपस्यन्तमधोमुखम् ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पृष्टनामान्वयो राज्ञा स किलाचष्ट धूमपः ।  
 आत्मानं शम्बुकं नाम शूद्रं सुपरदार्थिनम् ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तपस्यनधइकारित्वात्प्रजानां तमघावहम् ।  
 शीर्षच्छेद्यं परिच्छिद्य नियन्ता शस्त्रमाददे ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तद्वक्त्रं हिममक्लिष्टकिञ्जल्कमिव पङ्कजम् ।  
 ज्योतिष्कणाहतश्मश्रु कण्ठनालादपातयत् ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कृतदण्डः स्वयं राज्ञा लेभे शूद्रः सतां गतिम् ।  
 तपसा दुश्चरेणापि न स्वमार्गविलङ्घिना ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रघुनाथोऽप्यगस्त्येन मार्गसंदर्शितात्मना ।  
 महौजसा संयुयुजे शरत्काल इवेन्दुना ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुम्भयोनिरलंकारं तस्मै दिव्यपरिग्रहम् ।  
 ददौ दत्तं समुद्रेण पीतेनेवात्मनिष्क्रयम् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं दधन्मैथिलीकण्ठनिर्व्यापारेण बाहुना ।  
 पश्चान्निववृते रामः प्राक्परासुर्द्विजात्मजः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य पूर्वोदितां निन्दां द्विजः पुत्रसमागतः ।  
 स्तुत्या निवर्तयामास त्रातुर्वैवस्वतादपि ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमध्वराय मुक्ताश्वं रक्षः कपिनरेश्वराः ।  
 मेघाः सस्यमिवाम्भोभिरभ्यवर्षन्नुपायनैः ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिग्भ्यो निमन्त्रिताशअचैनमभिजग्मुर्महर्षयः ।  
 न भौमान्येव धिष्ण्यानि हित्वा ज्योतिर्मयान्यपि ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपशल्यनिविष्टैस्तैश्चतुर्द्वारमुखी बभौ ।  
 अयोध्या सृष्टलोकेव सद्यः पैतामही तनुः ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्लाघ्यस्त्यागोऽपि वैदेह्याः पत्युः प्राग्वंशवासिनः ।  
 अनन्यजानेः सैवासीद्यस्माज्जाया हिरण्मयी ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विघेरधिकसंभारस्ततः प्रववृते मखः ।  
 आसन्यत्र क्रियाविघ्ना राक्षसा एव रक्षिणः ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ प्राचेतसोपज्ञं रामायणमितस्ततः ।  
 मैथिलेयौ कुशलवौ जगतुर्गुरुचोदितौः ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वृत्तं रामस्य वाल्मीकेः कृतिस्तौ किंनरस्वनौ ।  
 किं तद्येन मनो हर्तुमलं स्यातां न श्रृण्वताम् ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रूपे गीते च माधुर्यं तयोस्तज्ज्ञैर्निवेदितम् ।  
 ददर्श सानुजो रामः शुश्राव च कुतूहली ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तद्गीतश्रवणैकाग्रा संसदश्रुमुखी बभौ ।  
 हिमनिष्यन्दिनी प्रातर्निर्वातेव वनस्थली ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वयोवेषविसंवादि रामस्य च तयोस्तदा ।  
 जनता प्रेक्ष्य सादृश्यं नाक्षिकम्पं व्यतिष्ठत ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उभयोर्न तथा लोकः प्रावीण्येन विसिष्मिपे ।  
 नृपतेः प्रीतिदानेषु वीतस्पृहतया यथा ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 गेये को नु विनेता वां कस्य चेयं कृतिः कवेः ।  
 इति राज्ञा स्वयं पृष्टौ तौ वाल्मीकिमशंसताम् ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ सावरजो रामः प्राचेतसमुपेयिवान् ।  
 ऊरूकृत्यात्मनो देहं राज्यमस्मै न्यवेदयत् ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तावाख्याय रामाय मैथिलेयौ तदात्मजौ ।  
 कविः कारुणिको वव्रे सीतायाः संपरिग्रहम् ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तात! शुद्धा समक्षं नः स्नुषा ते जातवेदसि ।  
 दौरात्म्याद्रक्षसस्तां तु नात्रत्याः श्रद्वधुः प्रजाः ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ताः स्वचारित्रमुद्दिश्य प्रत्याययतु मैथिली ।  
 ततः पुत्रवतीमेनां प्रतिपत्स्ये त्वदाज्ञया ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/73.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति प्रतिश्रुते राज्ञा जानकीमाश्रमान्मुनिः ।  
 शिष्यैरानाययामास स्वसिद्धिं नियमैरिव ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अन्येद्युरथ काकुत्स्थः संनिपात्य पुरौकसः ।  
 कविमाह्वाययामास प्रस्तुतप्रतिपत्तये ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्वरसंस्कारवत्यासौ पुत्राभ्यामथ सीतया ।  
 क्रचेवोदर्चिषं सूर्यं रामं मुनिरुपस्थितः ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 काषायपरिवीतेन स्वपदार्पितचक्षुषा ।  
 अन्वमीयत शुद्धेति शान्तेन वपुषैव सा ॥ 77 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/77.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/77.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जनास्तदालोकपथात्प्रतिसंहृतचक्षुषः ।  
 तस्थुस्तेऽवाङ्मुखाः सर्वे फलिता इव शालयः ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तां दृष्टिविषये भर्तुर्मुनिरास्थितविष्टरः ।  
 कुरु निःसंशयं वत्से! स्ववृत्ते लोकमित्यशात् ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 अथ वाल्मीकिशिष्येण पुण्यमावर्जितं पयः ।  
 आचम्योदीरयामास सीता सत्यां सरस्वतीम् ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वाङ्मनकर्मभिः पत्यौ व्यभिचारो यथा न मे ।  
 तथा विश्वंभरे देवि! मामन्तर्धातुमर्हसि ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 एवमुक्ते तया साध्व्या रन्ध्रात्सद्योभवाद्भुवः ।  
 शातह्रदमिव ज्योतिः प्रभामण्डलमुद्ययौ ॥ 82 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/82.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/82.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्र नागफणोत्क्षिप्तसिंहासननिषेदुषी ।  
 समुद्ररशना साक्षात्प्रादुरासीद्वसुंधरा ॥ 83 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/83.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/83.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सा सीतामङ्कमारोप्य भर्तृप्रणिहितेक्षणाम् ।  
 मा मेतिव्याहरत्येव तस्मिन्पालातमभ्यगात् ॥ 84 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/84.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/84.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 धरायां तस्य संरम्भं सीताप्रत्यर्पणैषिणः ।  
 गुरुर्विधिबलापेक्षी शमयामास धन्विनः ॥ 85 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/85.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/85.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ऋषीन्विसृज्य यज्ञान्ते सुहृदश्च पुरस्कृतान् ।  
 रामः सीतागतं स्नेहं निदधे तदपत्ययोः ॥ 86 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/86.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/86.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 युधाजितश्च संदेशात्स देशं सिन्धुनामकम् ।  
 ददौ दत्तप्रभावाय भरताय भृतप्रजः ॥ 87 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/87.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/87.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भरतस्तत्र गन्धर्वान्युधि निर्जित्य केवलम् ।  
 आतोद्यं ग्राहयामास समत्याजयदायुधम् ॥ 88 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/88.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/88.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तक्षपुष्कलौ पुत्रौ राजधान्योस्तदाख्ययोः ।  
 अभिषिच्याभिषेकार्हौ रामान्तिकमगात्पुनः ॥ 89 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/89.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/89.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अङ्गदं चन्द्रकेतुं च लक्ष्मणोऽप्यात्मसंभवौ ।  
 शासनाद्रघुनाथस्य चक्रे कारापथेश्वरौ ॥ 90 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/90.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/90.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इत्यारोपितपुत्रास्ते जननीनां जनेश्वराः ।  
 भर्तृलोकप्रपन्नानां निवापान्विदधुः क्रमात् ॥ 91 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/91.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/91.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपेत्य मुनिवेषोऽथ कालः प्रोवाच राघवम् ।  
 रहःसंवादिनौ पश्येदावां यस्तं त्यजेरिति ॥ 92 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/92.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/92.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तथेति प्रतिपन्नाय विवृतात्मा नृपाय सः ।  
 आचख्यौ दिवमध्यास्व शासनात्परमेष्ठिनः ॥ 93 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/93.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/93.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विद्वानपि तयोर्द्वाःस्थः समयं लक्ष्मणोऽभिनत् ।  
 भीतो दुर्वाससः शापाद्रामसंदर्शनार्थिनः ॥ 94 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/94.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/94.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स गत्वा सरयूतीरं देहत्यागेन योगवित् ।  
 चकारावितथां भ्रातुः प्रतिज्ञां पूर्वजन्मनः ॥ 95 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/95.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/95.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्मिन्नात्मचतुर्भागे प्राङ्गकमधितस्थुषि ।  
 राघवः शिथिलं तस्थौ भुवि धर्मस्त्रिपादिव ॥ 96 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/96.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/96.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स निवेश्य कुशावत्यां रिपुनागाङ्गुशं कुशम् ।  
 शरावत्यां सतां सूक्तैर्जनिताश्रुलवं लवम् ॥ 97 ॥  
 उदक्प्रतस्थे स्थिरधीः सानुजोऽग्निपुरःसरः ।  
 अन्वितः पतिवात्सल्याद्गृहवर्जमयोध्यया ॥ 98 ॥  
 
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/98.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/98.md"  newLevelForH1="4" includeTitle="true"> </div>
 
 जगृहुस्तस्य चित्तज्ञाः पदवीं हरिराक्षसाः ।  
 कदम्बमुकुलस्थूलैरभिवृष्टां प्रजाश्रुभिः ॥ 99 ॥  
@@ -406,21 +406,21 @@ title = "१५"
 जगृहुरिति॥ चित्तज्ञा हरिराक्षसाः कदम्बमुकुलस्थूलैः प्रजाश्रुभिरभिवृष्टां तस्य रामस्य पदवीं मार्गं जगृहुः। तेऽप्यनुजग्मुरित्यर्थः ॥ 99 ॥  
 उपस्थितविमानेन तेन भक्तानुकम्पिना ।  
 चक्रे त्रिदिवनिःश्रेणिः सरयूरनुयायिनाम् ॥ 100 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/100.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/100.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यद्गोप्रतरकल्पोऽभूत्संमर्दस्तत्र मज्जताम् ।  
 अतस्तदाख्यया तीर्थं पावनं भुवि पप्रथे ॥ 101 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/101.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/101.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स विभुर्विबुधांशेषु प्रतिपन्नात्ममूर्तिषु ।  
 त्रिदशीभूतपौराणां स्वर्गान्तरमकल्पयत् ॥ 102 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/102.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/102.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निर्वर्त्यैवं दशमुखशिरश्छेदकार्यं सुराणां  
 विष्वक्सेनः स्वतनुमविशत्सर्वलोकप्रतिष्ठाम् ।  
 लङ्कानाथं पवनतनयं चोभयं स्थापयित्वा  
 कीर्तिस्तम्भद्वयमिव गिरौ दक्षिणे चोत्तरे च ॥ 103 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/103.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/103.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायां पञ्चदशः सर्गः ।  
 
