--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19.md
@@ -9,236 +9,236 @@ title = "१९"
 रामचन्द्रपदाम्भोजयुगलं निबिडायताम् ॥   
 अग्निवर्णमभिषिच्य राघवः स्वे पदे तनयमग्नितेजसम् ।  
 शिश्रिये श्रुतवतामपश्चिमः पश्चिमे वयसि नैमिषं वशी ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्र तीर्थसलिलेन दीर्घिकास्तल्पमन्तरितभूमिभिः कुशैः ।  
 सौधवासमुटजेन विस्मृतः संचिकाय फलनिःस्पृहस्तपः ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 लब्धपालनविधौ न तत्सुतः खेदमाप गुरुणा हि मेदिनी ।  
 भोक्तुमेव भुजनिर्जितद्विषा न प्रसाधयितुमस्य कल्पिता ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सोऽधिकारमभिकः कुलोचितं काश्चन स्वयमवर्तयत्समाः ।  
 संनिवेश्य सचिवेष्वतः परं स्त्रीविधेयनवयौवनोऽभवत् ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कामिनीसहचरस्य कामिनस्तस्य वेश्मसु मृदङ्गनादिषु ।  
 ऋद्धिमन्तमधिकर्द्धिरुत्तरः पूर्वमुत्सवमपोहदुत्सवः ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इन्द्रियार्थपरिशून्यमक्षमः सोढुमेकमपि स क्षणान्तरम् ।  
 अन्तरेव विहरन्दिवानिशं न व्यपैक्षत समुत्सुकाः प्रजाः ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 गौरवाद्यदपि जातु मन्त्रिणां दर्शनं प्रकृतिकाङ्क्षितं ददौ ।  
 तद्गवाक्षविवरावलम्बिना केवलेन चरणेन कल्पितम् ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं कृतप्रणतयोऽनुजीविनः कोमलात्मनखरागरूषितम् ।  
 भेजिरे नवदिवाकरातपस्पृष्टपङ्कजतुलाधिरोहणम् ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यौवनोन्नतविलासिनीस्तनक्षोभलोलकमलाश्च दीर्घिकाः ।  
 गूढमोहनगृहास्तदम्बुभिः स व्यगाहत विगाढमन्मथः ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्र सेकहृतलोचनाञ्जनैर्धौतरागपरिपाटलाधरैः ।  
 अङ्गनास्तप्तधिकं व्यलोभयन्नार्पितप्रकृतकान्तिभिर्मुखैः ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 घ्राणकान्तमधुगन्धकार्षेणीः पानभूमिरवनाः प्रियासखः ।  
 अभ्यपद्यत स वासितासखः पुष्पिताः कमलिनीरिव द्विपः ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सातिरेकमदकारणं रहस्तेन दत्तमभिलेषुरङ्गनाः ।  
 ताभिरप्युपहृतं मुखासवं सोऽपिबद्बकुलतुल्यदोहदः ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अङ्कमङ्कपरिवर्तनोचिते तस्य निन्यतुरशून्यतामुमे ।  
 वल्लकी च हृदयंगमस्वना वल्गुवागपि च वोमलोचना ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स स्वयं प्रहतपुष्करः कृती लोलमाल्यवलयो हरन्मनः ।  
 नर्ककीरभिनयातिलङ्घिनीः पार्श्ववर्तिषु गुरुष्वलज्जयत् ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चारु नृत्यविगमे च तन्मुखं स्वेदभिन्नतिलकं परिश्रमात् ।  
 प्रेमदत्तवदनानिलः पिबन्नत्यजीवदमरालकेश्वरौ ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य सावरणदृष्टसंधयः काम्यवस्तुषु नवेषु सङ्गिनः ।  
 वल्लभाभिरुपसृत्य चक्रिरे सामिभुक्तविषयाः समागमाः ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अङ्गुलीकिसलयाग्रतर्जनं भ्रूविभङ्गकुटिलं च वीक्षितम् ।  
 मेखलाभिरसकृञ्च बन्धनं वञ्चयन्प्रणयिनीरवाप सः ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेन दूतिविदितं निषेदुषा पृष्ठतः सुरतवाररात्रिषु ।  
 शुश्रुवे प्रियजनस्य कातरं विप्रलम्भपरिशङ्किनो वचः ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 लौल्यमेत्य गृहिणीपरिग्रहान्नर्तकीषअवसुलभासु तद्वपुः ।  
 वर्तते स्म स कथंचिदालिखन्नङ्गुलीक्षरणसन्नवर्तिकः ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रेमगर्वितविपक्षमत्सरादायताञ्च मदनान्महीक्षितम् ।  
 निन्युरुत्सवविधिञ्छलेन तं देव्य उज्झितरुषः कृतार्थताम् ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रातरेत्य परिभोगशोभिना दर्शनेन कृतखण्डनव्यथाः ।  
 प्राञ्जलिः प्रणयिनीः प्रसादयन्सोऽदुनोत्प्रणयमन्थरः पुनः ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्पप्नकीर्तितविपक्षमङ्गनाः प्रत्यभैत्सुरवदन्त्य एव तम् ।  
 प्रच्छदान्तगलिताश्रुबिन्दुभिः क्रोधभिन्नवलयैर्विवर्तनैः ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्लृप्तपुष्पशयनाँल्लतागृहानेत्य दूतिकृतमार्गदर्शनः ।  
 अन्वभूत्परिजनाङ्गनारतं सोऽवरोधभयवेपथूत्तरम् ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नाम वल्लभजनस्य ते मया प्राप्य भाग्यमपि तस्य काङ्क्ष्यते ।  
 लोलुपं ननु मनो ममेति तं गोत्रविस्खलितमूचुरङ्गनाः ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चूर्णबभ्रु लुलितस्नगाकुलं छिन्नमेखलमलक्तकाङ्कितम् ।  
 उत्थितस्य शयनं विलासिनस्तस्य विभ्रमरतान्यपावृणोत् ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स स्वयं चरणरागमादधे योषितां न च तथा समाहितः ।  
 लोभ्यमाननयनः श्लथांशुकैर्मेखलागुणपदैर्नितम्बिभिः ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चुम्बने विपरिवर्तिताधरं हस्तरोधि रशनाविघट्टने ।  
 विघ्नितेच्छमपि तस्य सर्वतो मन्मथेन्धनमभूद्वधूरतम् ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दर्पणेषु परिभोगदर्शिनीर्नर्मपूर्वमनुपृष्ठसंस्थितः ।  
 छायया स्मितमनोज्ञया वधूर्ह्नीनिमीलितमुखीश्चकार सः ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कण्ठसक्तमृदुबाहुबन्धनं न्यस्तपादतलमग्नपादयोः ।  
 प्रार्थयन्त शयनोत्थितं प्रियास्तं निशात्ययविसर्गचुम्बनम् ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रेक्ष्य दर्पणतलस्थमात्मनो राजवेषमतिशक्रशोभिनम् ।  
 पिप्रिये न स तथा यथा युवा व्यक्तलक्ष्म परिभोगमण्डनम् ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मित्रकृत्यमपदिश्य पार्श्वतः प्रस्थितं तमनवस्थितं प्रियाः ।  
 विद्म हे शठ! पलायनच्छलान्यञ्जसेति रुरुधुः कचग्रहैः ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य निदयरतिश्रमालसाः कण्ठसूत्रमपदिश्य योषितः ।  
 अध्यशेरत बृहद्भुजान्तरं पीवरस्तनविलुप्तचन्दनम् ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संगमाय निशि गूढचारिणं चारदूतिकथितं पुरोगताः ।  
 वञ्चयिष्यसि कुतस्तमोवृतः कामुकेति चकृषुस्तमङ्गनाः ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 योषितामुडुपतेरिवार्चिषां स्पर्शनिर्वृत्तिमसाववाप्नुवन् ।  
 आरुरोह कुमुदाकरोपमां रात्रिजागरपरो दिवाशयः ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वेणुना दशनपीडिताधरा वीणया नखपदाङ्कितोरवः ।  
 शिल्पकार्य उभयेन वेजितास्तं विजिह्यनयना व्यलोभयन् ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अङ्गसत्त्ववचजनाश्रयं मिथः स्त्रीषु नृत्यमुपधाय दर्शयन् ।  
 स प्रयोगनिपुणैः प्रयोक्तृभिः संजघर्ष सह मित्रसंनिधौ ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इतः प्रभृति तस्य कतृत्रिमाद्रिषु तत्तदृतूचितविहारप्रकारमाह-  
 अंसलम्बिकुटजार्जुनस्रजस्तस्य नीपरजसाङ्गरागिणः ।  
 प्रावृषि प्रमदबहिणेष्वभूत्कृत्रिमाद्रिषु विहारविभ्रमः ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विग्रहाञ्च शयने पराङ्मुखीर्नानुनेतुमबलाः स तत्वरे ।  
 आचकाङ्क्ष घनशब्दविक्लवास्ता विवृत्य विशतीर्भुजान्तरम् ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कार्तिकीषु सवितानहर्म्यभाग्यामिनीषु ललिताङ्गनासखः ।  
 अन्वभुङ्क्तसुरतश्रमापहां मेघमुक्तविशदां स चन्द्रिकाम् ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सैकतं च सरयूं विवृण्वतीं श्रोणिबिम्बमिव हंसमेखलम् ।  
 स्वप्रियाविलसितानुकारिणीं सौधजालविवरैर्व्यलोकयत् ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मर्मरैरगुरुधूपगन्धिभिर्व्यक्तहेमरशनैस्तमेकतः ।  
 जह्नुराग्रथनमोक्षलोलुपं हैमनैर्निवसनैः सुमध्यमाः ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अर्पितस्तिमितदीपदृष्टयो गर्भवेश्मसु निवातकुक्षिषु ।  
 तस्य सर्वसुरतान्तरक्षमाः साक्षितां शिशिररात्रयो ययुः ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दक्षिणेन पवनेन संभृतं प्रेक्ष्य चूतकुसुमं सपल्लवम् ष।  
 अन्वनैषुरवधूतविग्रहास्तं दुरुत्सहवियोगमङ्गनाः ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ताः स्वमङ्कमधिरोप्य दोलया प्रेङ्खयन्परिजनापविद्धया ।  
 मुक्तरज्जु निबिडं भयच्छलात्कण्ठबन्धनमवाप बाहुभिः ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं पयोधरनिषिक्तचन्दनैर्मौक्तिकग्रथितचारुभूषणैः ।  
 ग्रीष्मवेषविधिभिः सिषेविरे श्रोणिलम्बिमणिमेखलैः प्रियाः ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यत्स लग्नसहकारमासवं रक्तपाटलसमागमं पपौ ।  
 तेन तस्य मधुनिर्गमात्कृशश्चित्तयोनिरभवत्पुनर्नवः ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 एवमिन्द्रियसुखानि निर्विशन्नन्यकार्यविमुखः स पार्थिवः ।  
 आत्मलक्षणनिवेदितानृतूनत्यवाहयदनङ्गवाहितः ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं प्रमत्तमपि न प्रभावतः शेकुराक्रमितुमन्यपार्थिवाः ।  
 आमयस्तु रतिरागसंभवो दक्षशाप इव चन्द्रमक्षिणोत् ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दृष्टदोषमपि तन्न सोऽत्यजत्सङ्गवस्तु भिषजामनाश्रवः ।  
 स्वादुभिस्तु विषयैर्हृतस्ततो दृःखमिन्द्रियगणो निवार्यते ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य पाण्डुवदनाल्पभूषणा सावलम्बगमना मृदुस्वना ।  
 राजयक्ष्मपरिहानिराययौ कामयानसमवस्थया तुलाम् ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 व्योम पश्चिमकलास्थितेन्दु वा पङ्कशेषमिव घर्मपल्वलम् ।  
 राज्ञि तत्कुलमभूत्क्षयातुरे वामनार्चिरिव दीपभाजनम् ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 बाढमेष दिवसेषु पार्थिवः कर्म साधयति पुत्रजन्मने ।  
 इत्यदर्शितरुजोऽस्य मन्त्रिणः शश्वदूचुरघशङ्किनीः प्रजाः ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स त्वनेकवनितासखोऽपि सन्पावनीमनवलोक्य संततिम् ।  
 वैद्ययत्नपरिभाविनं गदं न प्रदीप इव वायुमत्यगात् ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं गृहोपवन एव संगगताः पश्चिमक्रतुविदा पुरोधसा ।  
 रोगशान्तिमपदिश्य मन्त्रिणः संभृते शइखिनि गूढमादधुः ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तैः कृतप्रकृतिमुख्यसंग्रहैराशु तस्य सहधर्मचारिणी ।  
 साधु दृष्टशुभगर्भलभक्षणा प्रत्यपद्यत नराधिपश्रियम् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यास्तथाविधनरेन्द्रविपत्तिशोका-  
    दुष्णैर्विलोचनजलैः प्रथमाभितप्तः ।  
 निर्वापितः कनककुम्भमुखोज्झितेन  
     वंशाभिषेकविधिना शिशिरेण गर्भः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं भावार्थं प्रसवसमयाकाङ्क्षिणीनां प्रजाना-  
     मन्तर्गूढं क्षितिरिव नभोबीजमुष्टिं दधाना ।  
 मौलैः सार्धं स्थविरसचिवैर्हेमसिंहासनस्था  
     राज्ञी राज्यं विधिवदशिषद्भर्तुरव्याहताज्ञा ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायामेकोनविंशः सर्गः ।  
 ॥ समाप्तोऽयं ग्रन्थः ॥  
