--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
@@ -30,410 +30,410 @@ title = "०१"
 सद्यः परनिर्वृत्तये कान्तासंमिततयोपदेशयुजे ॥'(का.प्र. 2 इत्याद्यालंकारिकवचनप्रामाण्यात् काव्यस्यानेकश्रेयःसाधनतां 'काव्यालापांश्च वर्जये इत्यस्य निषेधशास्त्रस्यासत्काव्यविषयतां च पश्यन् रघुवंशाख्यं महाकाव्यं चिकीर्षुश्चिकीर्षितार्थाविघ्नपरिसमाप्तिसंप्रदायाविच्छेदलक्षणफलसाधनभूतविशिष्टदेवतानमस्कारस्य शिष्टाचारपरिप्राप्तत्वात् 'आशीर्नमस्क्रिया वस्तुनिर्देशो वापि तन्मुखम्'(काव्या.) इत्याशीराद्यन्यतमस्य प्रबन्धमुखलक्षमत्वात्काव्यनिर्माणस्य विशिष्टशब्दार्थप्रतिपत्तिमूलकत्वेन विशिष्टशब्दार्थयोश्च 'शब्दजातमशेषं तु धत्ते शर्वस्य वल्लभा। अर्थरूपं यदखिलं धत्ते मुग्धेन्दुशेखरः॥' इति वायुपुराणसंहितावचनबलेन पार्वतीपरमेश्वरायत्तत्वदर्शनात्तत्प्रतिपित्सया तावेवभिवादयते-  
 वागर्थाविव संपृक्तौ वागर्थप्रतिपत्तये ।  
 जगतः पितरौ वन्दे पार्वतीपरमेश्वरौ ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति कविः स्वाहंकारं परिहरति 'क्व सूर्य-' इत्यादि श्लोकद्वयेन-  
 क्व सूर्यप्रभवो वंशः क्व चाल्पविषया मतिः ।  
 तितीर्षुर्दुस्तरं मोहादुडुपेनास्मि सागरम् ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मन्दः कवियशःप्रार्थी गमिष्याम्युपहास्यताम् ।  
 प्रांशुलभ्ये फले लोभादुद्बाहुरिव वामनः ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ मन्दश्चेत्तर्हि त्यज्यतामयमुद्योग इत्यत आह-  
 अथ वा कृतवाग्द्वारे वंशेऽस्मिन्पूर्वसूरिभिः ।  
 मणौ वज्रसमुत्कीर्णे सूत्रस्येवास्ति मे गतिः ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 एवं रघुवंशे लब्धप्रवेशस्तद्वर्णनं प्रतिजानानः 'सोऽहम्' इत्यादिभिः पञ्चभिः श्लोकैः कुलकेनाह-  
 सोऽहमाजन्मशुद्धानामाफलोदयकर्मणाम् ।  
 आसमुद्रक्षितीशानामानाकरथवर्त्मनाम् ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यथाविधिहुताग्नीनां यथाकामार्चितार्थिनाम् ।  
 यथापराधदण्डानां यथाकालप्रबोधिनाम् ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 त्यागाय संभृतार्थानां सत्याय मितभाषिणाम् ।  
 यशसे विजिगीषूणां प्रजायै गृहमेधिनाम् ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शैशवेऽभ्यस्तविद्यानां यौवने विषयैषिणाम् ।  
 वार्धके मुनिवृत्तीनां योगेनान्ते तनुत्यजाम् ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रघूणामन्वयं वक्ष्ये तनुवाग्विभवोऽपि सन् ।  
 तद्गुणैः कर्णमागत्य चापलाय प्रचोदितः ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति स्वप्रबन्धपरीक्षार्थं सतः प्रार्थयते-  
 तं सन्तः श्रोतुमर्हन्ति सदसद्व्यक्तिहेतवः ।  
 हेम्नः संलक्ष्यते ह्यग्नौ विशुद्धिः श्यामिकापि वा ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वर्ण्यं वस्तूपक्षिपति-  
 वैवस्वतो मनुर्नाम माननीयो मनीषिणाम् ।  
 आसीन्महीक्षितामाद्यः प्रणवश्छन्दसामिव ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदन्वये शुद्धिमति प्रसूतः शुद्धिमत्तरः ।  
 दिलीप इति राजेन्दुरिन्दुः क्षीरनिधाविव ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 'व्यूढ-' इत्यादित्रिभिः श्लोकैर्दिलीपं विशिनष्टि-  
 व्यूढोरस्को वृषस्कन्धः शालप्रांशुर्महाभुजः ।  
 आत्मकर्मक्षमं देहं क्षात्रो धर्म इवाश्रितः ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सर्वातिरिक्तसारेण सर्वतेजोभिभाविना ।  
 स्थितः सर्वोन्नतेनोर्वीं क्रान्त्वा मेरुरिवात्मना ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आकारसदृशप्रज्ञः प्रज्ञया सदृशागमः ।  
 आगमैः सदृशारम्भ आरम्भसदृशोदयः ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भीमकान्तैर्नृपगुणैः स बभूवोपजीविनाम् ।  
 अधृष्यश्चाभिगम्यश्य यादोरत्नैरिवार्णवः ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रेखामात्रमपि क्षुण्णादा मनोर्वर्त्मनः परम् ।  
 न व्यतीयुः प्रजास्तस्य नियन्तुर्नेमिवृत्तयः ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 प्रजानामेव भूत्यर्थं स ताभ्यो बलिमग्रहीत् ।  
 सहस्रगुणमुत्स्रष्टुमादत्ते हि रसं रविः ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति बुद्धिशौर्यसंपन्नस्य तस्यार्थसाधनेषु परानपेक्षत्बमाह-  
 सेना परिच्छदस्तस्य द्वयमेवार्थसाधनम् ।  
 शास्रेष्वकुण्ठिता बुद्धिर्मौर्वी धनुषि चातता ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 राज्यमूलं मन्त्रसंरक्षणं तस्यासीदित्याह-  
 तस्य संवृतमन्त्रस्य गूढाकारेङ्गितस्य च ।  
 फलानुमेयाः प्रारम्भाः संस्काराः प्राक्तना इव ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति सामाद्युपायान् विनैवात्मरक्षादिकं कृतवानित्याह-  
 जुगोपात्मानमत्रस्तो भेजे धर्ममनातुरः ।  
 अगृध्नुराददे सोऽर्थमसक्तः सुखमन्वभूत् ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 परस्परविरुद्धानामपि गुणानां तत्र साहचर्यमासीदित्याह-  
 ज्ञाने मौनं क्षमा शक्तौ त्यागे श्लाघाविपर्ययः ।  
 गुणा गुणानुबन्धित्वात्तस्य सप्रसवा इव ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 द्विविधं वृद्धत्वं-ज्ञानतो वयसा च;तत्र तस्य ज्ञानेन वृद्धत्वमाह-  
 अनाकृष्टस्य विषयैर्विद्यानां पारदृश्वनः ।  
 तस्य धर्मरतेरासीद्वृद्धत्वं जरसा विना ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रजानां विनयाधानाद्रक्षणाद्भरणादपि ।  
 स पिता पितरत्त्तसां केवलं जन्महेतवः ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्थित्यै दण्डयतो दण्ड्यान्परिणेतुः प्रसूतये ।  
 अप्यर्थकामौ तस्यास्तां धर्म एव मनीषिणः ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दुदोह गां स यज्ञाय सस्याय मघवा दिवम् ।  
 संपद्विनिमयेनोभौ दधतुर्भुवनद्वयम् ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न किलानुययुस्तस्य राजानो रक्षितुर्यशः ।  
 व्यावृत्ता यत्परस्वेभ्यः श्रुतौ तस्करता स्थिता ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 द्वेष्योऽपि संमतः शिष्टस्तस्यार्तस्य यथौषधम् ।  
 त्याज्यो दुष्टः प्रियोऽप्यासीदङ्गुलीवोरगक्षता ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य परोपकारित्वमाह-  
 तं वेधा विदधे नूनं महाभूतसमाधिना ।  
 तथा हि सर्वे तस्यासन्परार्थैकफला गुणा ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स वेलावप्रवलयां परिखीकृतसागराम् ।  
 अनन्यशासनामुर्वीं शशासैकपुरीमिव ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य दाक्षिण्यरूढेन नाम्ना मगधवंशजा ।  
 पत्नी सुदक्षिणेत्यादीदध्वरस्येव दक्षिणा ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कलत्रवन्तमात्मानमवरोधे महत्यपि ।  
 तया मेने मनस्विन्या लक्ष्म्या च वसुधाधिपः ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यामात्मानुरूपायामात्मजन्मसमुत्सुकः ।  
 विलम्बितफलैः कालं स निनाय मनोरथैः ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संतानार्थाय विधये स्वभुजादवतारिता ।  
 तेन धूर्जगतो गुर्वी सचिवेषु निचिक्षिपे ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथाभ्यर्च्य विधातारं प्रयतौ पुत्रकाम्यया ।  
 तौ दंपती वसिष्ठस्य गुरोर्जग्मतुराश्रमम् ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्निग्धगम्भीरनिर्घोषमेकं स्यन्दनमाश्रितौ ।  
 प्रावृषेण्यं पयोवाहं विद्युदैरावताविव ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मा भूदाश्रमपीडेति परिमेयपुरः सरौ ।  
 अनुभावविशेषात्तु सेनापरिवृताविव ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सेव्यमानौ सुखस्पर्शैः शालनिर्यासगन्धिभिः ।  
 पुष्परेणूत्किरैर्वातैराधूतवनराजिभिः ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मनोभिरामाः श्रृण्वन्तौ रथनेमिस्वनोन्मुखैः ।  
 षड्जसंवादिनीः केका द्विधा भिन्नाः शिखण्डिभिः ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 परस्पराक्षिसादृश्यमदूरोज्झितवर्त्मसु ।  
 मृगद्वन्द्वेषु पश्यन्तौ स्यन्दनाबद्धदृष्टिषु ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्रेणीबन्धाद्वितन्वद्भिरस्तम्भां तोरणस्रजम् ।  
 सारसैः कलनिर्ह्रादैः क्वचिदुन्नमिताननौ ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पवनस्यानुकूलत्वात्प्रार्थनासिद्धिशंसिनः ।  
 रजोभिस्तुरगोत्कीर्णैरस्पृष्टालकवेष्टनौ ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सरसीष्वरविन्दानां वीचिविक्षोभशीतलम् ।  
 आमोदमुपजिघ्रन्तौ स्वनिःश्वासानकारिणम् ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ग्रामेष्वात्मविसृष्टेषु यूपचिह्नेषु यज्वनाम् ।  
 अमोघाः प्रतिगृह्णन्तावर्ध्यानुपदमाशिषः ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 हैयंगवीनमादाय घोषवृद्धानुपस्थितान् ।  
 नामधेयानि पृच्छन्तौ वन्यानां मार्गशाखिनाम् ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 काप्यभिख्या तयोरासीद्व्रजतोः शुद्धवेषयोः ।  
 हिमनिर्मुक्तयोर्योगे चित्राचन्द्रमसोरिव ॥ 46 ॥  
 कापीति। व्रजतोर्गच्छतोः शुद्धवेषयोरुज्ज्वलनेपथ्ययोः तयोः सुदक्षिणादिलीपयोः। हिमनिर्मुक्तयोश्चित्राचन्द्रमसोरिव। योगे सति काप्यनिर्वाच्याऽभिख्या शोभाऽ।ञसीत्। 'अभिख्या नामशोभयोः' इत्यमरः। 'आतश्चोपसर्गे' (पा.3।3।106) इत्यङ्प्रत्ययः। चित्रा नक्षत्रविशेषः। शिशिरापगमे चैत्र्यां चित्रापूर्णचन्द्रमसोरिवेत्यर्थः ॥ 46 ॥  
 तत्तद्भूमिपतिः पत्न्यै दर्शयन्प्रियदर्शनः ।  
 अपि लङ्घितमध्वानं बुबुधे न बुधोपमः ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स दुष्प्रापयशाः प्रापदाश्रमं श्रान्तवाहनः ।  
 सायं संयमिनस्तस्य महर्षेर्महिषीसखः ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमाश्रमं विशिनष्टि-  
 वनान्तरादुपावृत्तैः समित्कुशफलाहरैः ।  
 पूर्यमाणमदृश्याग्रिप्रत्युद्यातैस्तपस्विभिः ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आकीर्णऋषिपत्नीनामुटजद्वाररोधिभिः ।  
 अपत्यैरिव नीवारभागधेयोचितैर्मृगैः ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सेकान्ते मुनिकन्याभिस्तत्क्षणोज्झितवृक्षकम् ।  
 विश्वासाय विहंगानामालवालाम्बुपायिनाम् ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आतपात्ययसंक्षिप्तनीवारासु निषादिभिः ।  
 मृगैर्वर्तितरोमन्थमुटजाङ्गनभूमिषु ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अभ्युत्थिताग्निपिशुनैरतिथीनाश्रमोन्मुखान् ।  
 पुनानं पवनोद्धूतैर्धूमैराहुतिगन्धिभिः ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ यन्तारमादिश्य धुर्यान्विश्रामयेति सः ।  
 तामवारोहत्पत्नीं रथादवततार च ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्मै सभ्याः सभार्याय गोप्त्रे गुप्ततमेन्द्रियाः ।  
 अर्हणामर्हते चक्रुर्मुनयो नयचक्षुषे ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विधेः सायंतनस्यान्ते स ददर्श तपोनिधिम् ।  
 अन्वासितमरुन्धत्या स्वाहयेव हविर्भुजम् ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तयोर्जगृहतुः पादान्राजा राज्ञी च मागधी ।  
 तौ गुरुर्गुरुपत्नी च प्रीत्या प्रतिननन्दतुः ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमातिथ्यक्रियाशान्तरथक्षोभपरिश्रमम् ।  
 पप्रच्छ कुशलं राज्ये राज्याश्रममुनिं मुनिः ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथाथर्वनिधेस्तस्य विजितारिपुरः पुरः ।  
 अर्थ्यामर्थपतिर्वाचमाददे वदतां वरः ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपपन्नं ननु शिवं सप्तस्वङ्गेषु यस्य मे ।  
 दैवीनां मानुषीणां च प्रतिहर्ता त्वमापदाम् ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्र मानुषापत्प्रतीकारमाह-  
 तव मन्त्रकृतो मन्त्रैर्दूरात्प्रशमितारिभिः ।  
 प्रत्यादिश्यन्त इव मे दृष्टलक्ष्यभिदः शराः ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति दैविकापत्प्रतीकारमाह-  
 हविरावर्जितं होतस्त्वया विधिवदग्निषु ।  
 वृष्टिर्भवति सस्यानामवग्रहविशोषिणाम् ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पुरुषायुषजीविन्यो निरातङ्का निरीतयः ।  
 यन्मदीयाः प्रजास्तस्य हेतुस्त्वद्बह्मवर्चसम् ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 त्वयैवं चिन्त्यमानस्य गुरुणा ब्रह्मयोनिना ।  
 सानुबन्धाः कथं न स्युः संपदो मे निरापदः ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रत्यागमनप्रयोजनमाह-  
 किंतु वध्वां तवैतस्यामदृष्टसदृशप्रजम् ।  
 न मामवति सद्वीपा रत्नसूरपि मेदिनी ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदेव प्रतिपादयति-  
 नूनं मत्तः परं वंश्याः पिण्डविच्छेददर्शिनः ।  
 न प्रकामभुजः श्राद्धे स्वधासंग्रहतत्पराः ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मत्परं दुर्लभं मत्वा नूनमावर्जितं मया ।  
 पयः पूर्वैः स्वनिःश्वासैः कवोष्णमुपभुज्यते ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सोऽहमिज्याविशुद्धात्मा प्रजालोपनिमीलितः ।  
 प्रकाशश्चाप्रकाशश्च लोकालोक इवाचलः ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ननु तपोदानादिसंपन्नस्य किमपत्यैरित्यत्राह-  
 लोकान्तरसुखं पुण्यं तपोदानसमुद्भवम् ।  
 संततिः शुद्धवंश्या हि परत्रेह च शर्मणे ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तया हीनं विधातर्मां कथं पश्यन्न दूयसे? ।  
 सिक्तं स्वयमिव स्नेहाद्वन्ध्यमाश्रमवृक्षकम् ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 असह्यपीडं भगवन्नृणमन्त्यमवेहि मे ।  
 अरुन्तुदमिवालानमनिर्वाणस्य दन्तिनः ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्मान्मुच्ये यथा तात! संविधातुं तथार्हसि ।  
 इक्ष्वाकूणां दुरापेऽर्थे त्वदधीना हि सिद्धयः ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति विज्ञापितो राज्ञा ध्यानस्तिमितलोचनः ।  
 क्षणमात्रमृषिस्तस्थौ सुप्तमीन इव ह्रदः ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/73.md"  newLevelForH1="4" includeTitle="true"> </div>
 
 सोऽपश्यत्प्रणिधानेन संततेः स्तम्भकारणम् ।  
 भावितात्मा भुवो भर्तुरथैनं प्रत्यबोधयत् ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पुरा शक्रमुपस्थाय तवोर्वीं प्रति यास्यतः ।  
 आसीत्कल्पतरुच्छायामाश्रिता सुरभिः पथि ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः किमित्यत्राह-  
 धर्मलोपभयाद्राज्ञीमृतुस्नातामिमां स्मरन् ।  
 प्रदक्षिणक्रियार्हायां तस्यां त्वं साधु नाचरः ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवजानासि मां यस्मादतस्ते न भविष्यति।  
 मत्प्रसूतिमनाराध्य प्रजेति त्वां शशाप सा ॥ 77 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/77.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/77.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कथं तदस्माभिर्न श्रुतमित्यह-  
 स शापो न त्वया राजन्न च सारथिना श्रुतः ।  
 नदत्याकाशगङ्गायाः स्रोतस्युद्दामदिग्गजे ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 अस्तु; प्रस्तुते किमायातमित्यत्राह-  
 ईप्सितं तदवज्ञानाद्विद्धि सार्गलमात्मनः ।  
 प्रतिबध्नाति हि श्रेयः पूज्यपूजाव्यतिक्रमः ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तर्हि गत्वा तामाराधयामि; सा वा कथंचिदागमिष्यतीत्याशा न कर्तव्येत्याह-  
 हविषे दीर्घसत्रस्य सा चेदानीं प्रचेतसः ।  
 भुजङ्गपिहितद्वारं पातालमधितिष्टति ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तर्हि का गतिरित्यत आह-  
 सुतां तदीयां सुरभेः कृत्वा प्रतिनिधिं शुचिः ।  
 आराधय सपत्नीकः प्रीता कामदुघा हि सा ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति वादिन एवास्य होतुराहुतिसाधनम् ।  
 अनिन्द्या नन्दिनी नाम धेनुराववृते वनात् ॥ 82 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/82.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/82.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति धेनुं विशिनष्टि-  
 ललाटोदयमाभुग्नं पल्लवस्निग्धापाटला ।  
 बिभ्रती श्वेतरोमाङ्कं संध्येव शशिनं नवम् ॥ 83 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/83.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/83.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भुवं कोष्णेन कुण्डोध्नी मेध्येनावभृथादपि ।  
 प्रस्रवेणाभिवर्षन्ती वत्सालोकप्रवर्तिना ॥ 84 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/84.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/84.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रजःकणैः खुरोद्धूतैः स्पृशद्भिर्गात्रमन्तिकात् ।  
 तीर्थाभिषेकजां शुद्धिमादधाना महीक्षितः ॥ 85 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/85.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/85.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तां पुण्यदर्शनां दृष्ट्वा निमित्तज्ञस्तपोनिधिः ।  
 याज्यमाशंसितावन्ध्यप्रार्थनं पुनरब्रवीत् ॥ 86 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/86.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/86.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अदूरवर्तिनीं सिद्धिं राजन्विगणयात्मनः ।  
 उपस्थितेयं कल्याणी नाम्नि कीर्तित एव यत् ॥ 87 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/87.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/87.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वन्यवृत्तिरिमां शश्वदात्मानुगमनेन गाम् ।  
 विद्यामभ्यसनेनेव प्रसादयितुमर्हसि ॥ 88 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/88.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/88.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 गवानुसरणप्रकारमाह-  
 प्रस्थितायां प्रतिष्ठेथाः स्थितायां स्थितिमाचरेः ।  
 निषण्णायां निषीदास्यां पीताम्भसि पिबेरपः ॥ 89 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/89.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/89.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वधूर्भक्तिमती चैनामर्चितामा तपोवनात् ।  
 प्रयता प्रातरन्वेतु सायं प्रत्युद्व्रजेदपि ॥ 90 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इत्या प्रसादादस्यास्त्वं परिचर्यापरो भव ।  
 अविघ्नमस्तु ते स्थेयाः पितेव धुरि पुत्रिणाम् ॥ 91 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तथेति प्रतिजग्राह प्रीतिमान्सपरिग्रहः ।  
 आदेशं देशकालज्ञः शिष्यः शासितुरानतः ॥ 92 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/92.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/92.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ प्रदोषे दोषज्ञः संवेशाय विशांपतिम् ।  
 सूनुः सूनृतवाक्स्रष्टुर्विससर्जोदितश्रियम् ॥ 93 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/93.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/93.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सत्यामपि तपःसिद्धौ नियमापेक्षया मुनिः ।  
 कल्पवित्कल्पयामास वन्यामेवास्य संविधाम् ॥ 94 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/94.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/94.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निर्दिष्टां कुलपतिना स पर्णशाला-  
 मध्यास्य प्रयतपरिग्रहद्वितीयः ।  
 तच्छिष्याध्ययननिवेदितावसानां  
 संविष्टः कुशशयने निशां निनाय ॥ 95 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/95.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/95.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितया संजीवननीसमाख्यया व्याख्याया समेतो महाकविश्रीकालिदासकृतौ रघुवंशे महाकाव्ये वसिष्ठाश्रमाभिगमनो नाम प्रथमः सर्गः।  
