--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03.md
@@ -10,290 +10,290 @@ title = "०३"
 'राज्ञी गर्भमाधत्त'(2।75) इत्युक्तम्,संप्रति गर्भलक्षणानि वर्णयितुं प्रस्तौति-  
 अथेप्सितं भर्तुरुपस्थितोदयं सखीजनोद्वीक्षणकौमुदीमुखम् ।  
 निदानमिक्ष्वाकुकुलस्य संततेः सुदक्षिणा दौर्हृदलक्षणं दधौ ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति क्षामताख्यं गर्भलक्षणं वर्णयति-  
 शरीरसादादसमग्रभूषणा मुखेन सालक्ष्यत लोध्रपाण्डुना ।  
 तनुप्रकाशेन विचेयतारका प्रभातकल्पा शशिनेव शर्वरी ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दोहदलक्षणे मृद्भक्षणे हेत्वन्तरमुत्प्रेक्षते-  
 तदाननं मृत्सुरभि क्षितीश्वरो रहस्युपाघ्राय न तृप्तिमाययौ ।  
 करीव सिक्तं पृषतैः पयोमुचां शुचिव्यपाये वनराजिपल्वलम् ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिवं मरुत्वानिव भोक्ष्यते भुवं दिग विश्रान्तरथो हि तत्सुतः ।  
 अतोऽभिलाषे प्रथमं तथाविधे मनो बवन्धान्यरसान्विलङ्घ्य सा ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न मे ह्रिया शंसति किंचिदीप्सितं स्पृहावती वस्तुषु केषु मागधी ।  
 इति स्म पृच्छत्यनुवेलमादृतः प्रियासखीरुत्तरकोसलेश्वरः ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपेत्य सा दोहददुःखशीलतां यदेव वव्रे तदपश्यदाहृतम् ।  
 न हीष्टमस्य त्रिदिवेऽपि भूपतेरभूदनासाद्यमधिज्यधन्वनः ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्रमेण निस्तीर्य च दोहदव्यथां प्रचीयमानावयवा रराज सा ।  
 पुराणपत्रापगमादनन्तरं लतेव संनद्धमनोज्ञपल्लवा ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 लक्षणान्तरं वर्णयति-  
 दिनेषु गच्छत्सु नितान्तपीवरं तदीयमानीलमुखं स्तनद्वयम् ।  
 तिरश्चकार भ्रमराभिलीनयोः सुजातयोः पङ्कजकोशयोः श्रियम् ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निधानगर्भामिव सागराम्बरां शमीमिवाभ्यन्तरलीनपावकाम् ।  
 नदीमिवान्तःसलिलां सरस्वतीं नृपः ससत्त्वां महिषीममन्यत ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रियानुरागस्य मनः समुन्नतेर्भुजार्जितानां च दिगन्तसंपदाम् ।  
 यथाक्रमं पुंसवनादिकाः क्रिया धृतेश्च धीरः सदृशीर्व्यधत्त सः ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सुरेन्द्रमात्राश्रितगर्भगौरवात्प्रयत्नमुक्तासनया गृहागतः ।  
 तयोपचाराञ्जलिखिन्नहस्तया ननन्द पारिप्लवनेत्रया नृपः ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुमारभृत्याकुशलैरनुष्ठिते भिषग्भिराप्तैरथ गर्भभर्मणि ।  
 पतिः प्रतीतः प्रसवोन्मुखीं प्रियां ददर्श काले दिवमभ्रितामिव ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ग्रहैस्ततः पञ्चभिरुञ्चसंश्रयैरसूर्यगैः सूचितभाग्यसंपदम् ।  
 असूत पुत्रं समये शचीसमा त्रिसाधना शक्तिरिवार्थमक्षयम् ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिशः प्रसेदुर्मरुतो ववुः सुखाः प्रदक्षिणार्चिर्हविरग्निराददे ।  
 बभूव सर्वं शुभशंसि तत्क्षणं भवो हि लोकाभ्युदयाय तादृशाम् ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अरिष्टशय्यां परितो विसारिणा सुजन्मनस्तस्य निजेन तेजसा ।  
 निशीथदीपाः सहसा हतत्विषो बभूवुरालेख्यसमर्पिता इव ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जनाय शुद्धान्तचराय शंसते कुमारजन्मामृतसंमिताक्षरम् ।  
 अदेयमासीत्त्रयमेव भूपतेः शशिप्रभ छत्रमुभे च चामरे ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निवातपद्मस्तिमितेन चक्षुषा नृपस्य कान्तं पिबतः सुताननम् ।  
 महोदधेः पूर इवेन्दुदर्शनाद्गुरुः प्रहर्षः प्रबभूव नात्मनि ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स जातकर्मण्यखिले तपस्विना तपोवनादेत्य पुरोधसा कृते ।  
 दिलीपसूनुर्मणिराकरोद्भवः प्रयुक्तसंस्कार इवाधिकं बभौ ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सुखश्रवा मङ्गलतूर्यनिस्वनाः प्रमोदनृत्यैः सह वारयोषिताम् ।  
 न केवलं सद्मनि मागधीपतेः पथि व्यजृम्भन्त दिवौकसामपि ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न संयतस्तस्य बभूव रक्षितुर्विसर्जयेद्यं सुतजन्महर्षितः ।  
 ऋणाभिधानात्स्वयमेव केवलं तदा पितॄणां मुमुचे स बन्धनात् ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्रुतस्य यायादयमन्तमर्भकस्तथा परेषां युधि चेति पार्थिवः ।  
 अवेक्ष्य धातोर्गमनार्थमर्थविञ्चकार नाम्ना रघुमात्मसंभवम् ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पितुः प्रयत्नात्स समग्रसंपदः शुभैः शरीरावयवैर्दिने दिने ।  
 पुपोष वृद्धिं हरिदश्वदीधितेरनुप्रवेशादिव बालचन्द्रमाः ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उमावृषाङ्कौ शरजन्मना यथा यथा जयन्तेन शचीपुरंदरौ ।  
 तथा नृपः सा च सुतेन मागधी ननन्दतुस्तत्सदृशेन तत्समौ ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रथाङ्गनाम्नोरिव भावबन्धनं बभूव यत्प्रेम परस्पराश्रयम् ।  
 विभक्तमप्येकसुतेन तत्तयोः परस्परस्योपरि पयचीयत ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उवाच धात्र्या प्रथमोदितं वचो ययौ तदीयामवलम्ब्य चाङ्गुलिम् ।  
 अभूञ्च नम्रः प्रणिपातशिक्षया पितुर्मुदं तेन ततान सोऽर्भकः ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमङ्कमारोप्य शरीरयोगजैः सुखैर्निषिञ्चन्तमिवामृतं त्वचि ।  
 उपान्तसंमीलितलोचनो नृपश्चिरात्सुतस्पर्शरसज्ञतां ययौ ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अमंस्त चानेन परार्ध्यजन्मना स्थितेरभेत्ता स्थितिमन्तमन्वयम् ।  
 स्वमूर्तिभेदेन गुणाग्र्यवर्तिना पतिः प्रजानामिव सर्गमात्मनः ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स वृत्तचूलश्चलकाकपक्षकैरमात्यपुत्रैः सवयोभिरन्वितः ।  
 लिपेर्यथावद्ग्रहणेन वाङ्मयं नदीमुखेनेव समुद्रमाविशत् ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथोपनीतं विधिवद्विपश्चितो विनिन्युरेनं गुरवो गुरुप्रियम् ।  
 अवन्ध्ययत्नाश्च बभूवुरत्र ते क्रिया हि वस्तूपहिता प्रसीदति ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 धियः समग्रैः स गुणैरुदारधीः क्रमाञ्चतस्रश्चतुरर्णवोपमाः ।  
 ततार विद्याः पवनातिपातिभिर्दिशो हरिद्भिर्हरितामिवेश्वरः ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 त्वचं स मेध्यां परिधाय रौरवीमशिक्षतास्त्त्रं पितुरेव मन्त्रवत् ।  
 न केवलं तद्गुरुरेकपार्थिवः क्षितावभूदेकधनुर्धरोऽपि सः ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 महोक्षतां वत्सतरः स्पृशन्निव द्विपेन्द्रभावं कलभः श्रयन्निव ।  
 रघुः क्रमाद्यौवनभिन्नशैशवः पुपोप गाम्भीर्यमनोहरं वपुः ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथास्य गोदानविधेरनन्तरं विवाहदीक्षां निरवर्तयद्गुरुः ।  
 नरेन्द्रकन्यास्तमवाप्य सत्पतिं तमोनुदं दक्षसुता इवाबभुः ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति यौवराज्ययोग्यतामाह-  
 युवा युगव्यायतबाहुरंसलः कपाटवक्षाः परिणद्धकंधरः ।  
 वपुः प्रकर्षादजयद्गुरुं रघुस्तथापि नीचौर्विनयाददृश्यत ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः प्रजानां चिरमात्मना धृतां नितान्तगुर्वीं लघयिष्यता धुरम् ।  
 निसर्गसंस्कारविनीत इत्यसौ नृपेण चक्रे युवराजशब्दभाक् ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नरेन्द्रमूलायतनादनन्तरं तदास्पदं श्रीर्युवराजसंज्ञितम् ।  
 अगच्छदंशेन गुणाभिलाषिणी नवावतारं कमलादिवोत्पलम् ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विभावसुः सारथिनेव वायुना घनव्यपायेन गभस्तिमानिव ।  
 बभूव तेनातितरां सुदुःसहः कटप्रभेदेन करीव पार्थिवः ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नियुज्य तं होमतुरंगरक्षणे धनुर्धरं राजसुतैरनुद्रुतम् ।  
 अपूर्णमेकेन शतक्रतूपमः शतं क्रतूनामपविघ्नमाप सः ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः परं तेन मखाय यज्वना तुरंगमुत्सृष्टमनर्गलं पुनः ।  
 धनुर्भृतामग्रत एव रक्षिणां जहार शक्रः किल गूढविग्रहः ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विषादलुप्तप्रतिपत्ति विस्मितं कुमारसैन्यं सपदि स्थितं च तत् ।  
 वसिष्ठधेनुश्च यदृच्छयागता श्रुतप्रभावा ददृशेऽथ नन्दिनी ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदङ्गनिस्यन्दजलेन लोचने प्रमृज्य पुण्येन पुरस्कृतः सत्ताम् ।  
 अतीन्द्रियेष्वप्युपपन्नदर्शनो बभूव भावेषु दिलीपनन्दनः ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स पूर्वतः पर्वतपक्षशातनं ददर्श देवं नरदेवसंभवः ।  
 पुनः पुनः सूतनिषिद्धचापलं हरन्तमश्वं रथरश्मिसंयतम् ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शतैस्तमक्ष्णामनिमेषवृत्तिभिर्हरिं विदित्वा हरिभिश्च वाजिभिः ।  
 अवोचदेनं गगनस्पृशा रघुः स्वरेण धीरेण निवर्तयन्निव ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मखांशभाजां प्रथमो मनीषिभिस्त्वमेव देवेन्द्र! सदा निगद्यसे ।  
 अजस्रदीक्षाप्रयतस्य मद्गुरोः क्रियाविथाताय कथं प्रवर्तसे ? ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 त्रिलोकनाथेन सदा मखद्विषस्त्वया नियम्या ननु दिव्यचक्षुषा ।  
 स चेत्स्वयं कर्मसु धर्मचारिणां त्वमन्तरायो भवसिच्युतोविधिः ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदङ्गमग्र्यं मघवन्महाक्रतोरमुं तुरंगं प्रतिमोक्तुमर्हसि ।  
 पथः श्रुतेर्दर्शयितार ईश्वरा मलीमसामाददते न पद्धतिम् ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति प्रगल्भं रघुणा समीरितं वचो निशम्याधिपतिर्दिवौकसाम् ।  
 निवर्तयामास रथं सविस्मयः प्रचक्रमे च प्रतिवक्तुमुत्तरम् ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यदात्थ राजन्यकुमार! तत्तथा यशस्तु रक्ष्यं परतो यशोधनैः ।  
 जगत्प्रकाशं तदशेषमिज्यया भवद्गुरुर्लङ्घयितुं ममोद्यतः ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 किं तद्यश इत्याह-  
 हरिर्यथैकः पुरुषोत्तमः स्मृतो महेश्वरस्त्त्र्यम्बक एव नापरः ।  
 तथा विदुर्मां मुनयः शतक्रतुं द्वितीयगामी न हि शब्द एष नः ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अतोऽयमश्वः कपिलानुकारिणा पितुस्त्वदीयस्य मयापहारितः ।  
 अलं प्रयत्नेन तवात्र मा निधाः पदं पदव्यां सगरस्य संततेः ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः प्रहस्यापभयः पुरंदरं पुनर्बभाषे तुरगस्य रक्षिता ।   ॥ 50 ॥
 गृहाण शस्त्त्रं यदि सर्ग एष ते न खल्वनिर्जित्य रघुं कृती भवान् ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स एवमुक्त्वा मघवन्तमुन्मुखः करिष्यमाणः सशरं शरासनम् ।  
 अतिष्ठदालीढविशेषशोभिना वपुःप्रकर्षेण विडम्बितेश्वरः ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रघोरवष्टम्भमयेन पत्रिणा हृदि क्षतो गोत्रभिदप्यमर्षणः ।  
 नवाम्बुदानीकमुहूर्तलाञ्छने धनुष्यमोघं समधत्त सायकम् ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिलीपसूनोः स बृहद्भुजान्तरं प्रविश्य भीमासुरशोणितोचितः ।  
 पपावनास्वादितपूर्वमाशुगः कुतूहलेनेव मनुष्यशोणितम् ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 हरेः कुमारोऽपि कुमारविक्रमः सुरद्विपास्फालनकर्कशाङ्गुलौ ।  
 भुजे शचीपत्रविशेषकाङ्किते स्वनामचिह्नं निचखान सायकम् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जहार चान्येन मयूरपत्रिणा शरेण शक्रस्य महाशनिध्वजम् ।  
 चुकोप तस्मै स भृशं सुरश्रियः प्रसह्य केशव्यपरोपणादिव ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तयोरुपान्तस्थितसिद्धसैनिकं गरुत्मदाशीविषभीमदर्शनैः ।  
 बभूव युद्धं तुमुलं जयैषिणोरधोमुखैरूर्ध्वमुखैश्च पत्रिभिः ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अतिप्रबन्धप्रहितास्त्त्रवृष्टिभिस्तमाश्रयं दुष्प्रसहस्य तेजसः ।  
 शशाक निर्वापयितुं न वासवः स्वतश्च्युतं वह्निमिवाद्भिरम्बुदः ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः प्रकोष्ठे हरिचन्दनाङ्किते प्रमथ्यमानार्णवधीरनादिनीम् ।  
 रघुः शशाङ्कार्धमुखेन पत्रिणा शरासनज्यामलुनाद्बिडौजसः ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स चापमुत्सृज्य विवृद्धमत्सरः प्रणाशनाय प्रबलस्य विद्विषः ।  
 महीध्रपक्षव्यपरोपणोचितं स्फुरत्प्रभामण्डलमस्त्त्रमाददे ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रघुर्भृशं वक्षसि तेन ताडितः पपात भूमौ सह सैनिकाश्रुभिः ।  
 निमेषमात्रादवधूय च व्यथां सहोत्थितः सैनिकहर्षनिस्वनैः ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तथापि शस्त्त्रव्यवहारनिष्ठुरे विपक्षभावे चिरमस्य तस्थुषः ।  
 तुतोष वीर्यातिशयेन वृत्रघहा पदं हि सर्वत्र गुणैर्निधीयते ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 असङ्गमद्रिष्वपि सारवत्तया न मे त्वदन्येन विसोढमायुधम् ।  
 अवेहि मां प्रीतमृते तुरंगमात्किमिच्छसीति स्फुटमाह वासवः ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततो निषङ्गादमसमग्रमुद्धृतं सुवर्णपुङ्खद्युतिरञ्जिताङ्गुलिम् ।  
 नरेन्द्रसूनुः प्रतिसंहरन्निषुं प्रियंवदः प्रत्यवदत्सुरेश्वरम् ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अमोच्यमश्वं यदि मन्यसे प्रभो! ततः समाप्ते विधिनैव कर्मणि ।  
 अजस्रदीक्षाप्रयतः स मद्गुरुः क्रतोरशेषेण फलेन युज्यताम् ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यथा च वृत्तान्तमिमं सदोगतस्त्त्रिलोचनैकांशतया दुरासदः ।  
 तवैव संदेशहराद्विशांपतिः श्रृणोति लोकेश! तथाविधीयताम् ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तथेति कामं प्रतिशुश्रुवान्रघोर्यथागतं मातलिसारथिर्ययौ ।  
 नृपस्य नातिप्रमनाः सदोगृहं सुदक्षिणासूनुरपि न्यवर्तत ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमभ्यनन्दत्प्रथमं प्रबोधितः प्रजेश्वरः शासनहारिणा हरेः ।  
 परामृशन्हर्षजडेन पाणिना तदीयमङ्गं कुलिशव्रणाङ्कितम् ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति क्षितीशो नवतिं नवाधिकां महाक्रतूनां महनीयशासनः ।  
 समारुरुक्षुर्दिवमायुषः क्षये ततान सोपानपरम्परामिव ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ स विषयव्यावृत्तात्मा यथाविधि सूनवे  
     नृपतिककुदं दत्त्वा यूने सितातपवारणम् ।  
 मुनिवनतरुच्छायां देव्या तया सह शिश्रिये  
      गलितवयसामिक्ष्वाकूणामिदं हि कुलव्रतम् ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीविनीसमाख्यायां तृतीयः सर्गः ।  
 
