--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04.md
@@ -9,353 +9,353 @@ title = "०४"
 सर्वदा सर्वदाऽस्माकं सन्निधिं संनिधिं क्रियात् ॥  
 स राज्यं गुरुणा दत्तं प्रतिपद्याधिकं बभौ ।  
 दिनान्ते निहितं तेजः सवित्रेव हुताशनः ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिलीपानन्तरं राज्ये तं निशम्य प्रतिष्ठितम् ।  
 पूर्वं प्रधूमितो राज्ञां हृदयेऽग्निरिवोत्थितः ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पुरुहूतध्वजस्येव तस्योन्नयनपङ्क्तयः ।  
 नवाभ्युत्थानदर्शिन्यो ननन्दुः सप्रजाः प्रजाः ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सममेव समाक्रान्तं द्वयं द्विरदगामिना ।  
 तेन सिंहासनं पित्र्यमखिलं चारिमण्डलम् ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ सिंहासनारोहणानन्तरं तस्य लक्ष्मीसंनिधानमाह-  
 छायामण्डललक्ष्येण तमदृश्या किल स्वयम् ।  
 पद्मा पद्मातपत्रेण मेजे साम्राज्यदीक्षितम् ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति सरस्वतीसांनिध्यमाह-  
 परिकल्पितसांनिध्या काले काले च बन्दिषु ।  
 स्तुत्यं स्तुतिभिरर्थ्याभिरुपतस्थे सरस्वती ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मनुप्रभृतिभिर्मान्यैर्भुक्ता यद्यपि राजभिः ।  
 तथाप्यनन्यपूर्वेव तस्मिन्नासीद्धसुंधरा ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अत्र कारणमाह-  
 स हि सर्वस्य लोकस्य युक्तदण्डतया मनः ।  
 आददे नातिशीतोष्णो नभस्वानिव दक्षिणः ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मन्दोत्कण्ठाः कृतास्तेन गुणाधिकतया गुरौ ।  
 फलेन सहकारस्य पुष्पोद्गम इव प्रजाः ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नयविद्भिर्नवे राज्ञि सदसञ्चोपदर्शितम् । ॥ 9 ॥   
 पूर्वं एवाभवत्पक्षस्तस्मिन्नाभवदुत्तरः ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पञ्जानामपि भूतानामुत्कर्षं पुपुषुर्गुणाः ।  
 नवे तस्मिन्महीपाले सर्वं नवमिवाभवत् ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यथा प्रह्लादनाञ्चन्द्रः प्रतापात्तपनो यथा ।  
 तथैव सोऽभूदन्वर्थो राजा प्रकृतिरञ्जनात् ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कामं कर्णान्तविश्रान्ते विशाले तस्य लोचने ।  
 चक्षुष्मत्ता तु शास्त्त्रेण सूक्ष्मकार्यार्थदर्शिना ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 लब्धप्रशमनस्वस्थमथैनं समुपस्तिता ।  
 पार्थिवश्रीर्दितीयेव शरत्पङ्कजलक्षणा ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निर्वृष्टलघुभिर्मेघैर्मुक्तवर्त्मा सुदुःसहः ।  
 प्रतापस्तस्य भानोश्च युगपद्व्यानशे दिशः ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वार्षिकं संजहारेन्द्रो धनुर्जैत्रं रघुर्दधौ ।  
 प्रजार्थसाधने तौ हि पर्यायोद्यतकार्मुकौ ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पुण्डरीकातपत्रस्तं विकसत्काशचामरः ।  
 ऋतुर्विडम्बयामास न पुनः प्राप तच्छ्रियम् ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रसादसुमुखे तस्मिंश्चन्द्रे च विशदप्रभे ।  
 तदा चक्षुष्मतां प्रीतिरासीत्समरसा द्वयोः ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 हंसश्रेणीषु तारासु कुमुद्वत्सु च वारिषु ।  
 विभूतयस्तदीयानां पर्यस्ता यशसामिव ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इक्षुच्छायनिषादिन्यस्तस्य गोप्तुर्गुणोदयम् ।  
 आकुमारकथोद्घातं शालिगोप्यो जगुर्यशः ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रससादोदयादम्भः कुम्भयोनेर्महौजसः ।  
 रघोरभिभवाशङ्कि चुक्षुभे द्विषतां मनः ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मदोदग्राः ककुद्मन्तः सरितां कूलमुद्रुजाः ।  
 लीलाखेलमनुप्रापुर्महोक्षास्तस्य विक्रमम् ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रसवैः सप्तपर्णानं मदगन्धिभिराहताः ।  
 असूययेव तन्नागाः सप्तधैव प्रसुस्रुवुः ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सरितः कुर्वती गाधाः पथश्चाश्यानकर्दमान् ।  
 यात्रायै चोदयामास तं शक्तेः प्रथमं शरत् ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्मै रुम्यग्घुतो विह्निर्वाजिनीराजनाविधौ ।  
 प्रदक्षिणार्चिर्व्याजेन हस्तेनेव जयं ददौ ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स गुप्तमूलप्रत्यन्तः शुद्धपार्ष्णिरयान्वितः ।  
 षड्विधं बलमादाय प्रतस्थे दिग्जिगीषया ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवाकिरन्वयोवृद्धास्तं लाजैः पौरयोषितः ।  
 पृषतैर्मन्दरोद्धूतैः क्षीरोर्मय इवाच्युतम् ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स ययौ प्रथमं प्राचीं तुल्यः प्राचीनबर्हिषा ।  
 अहिताननिलोद्धूतैस्तर्जयन्निव केतुभिः ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रजोभिः स्यन्दनोद्धूतैर्गजैश्च घनसंनिभैः ।  
 भुवस्तलमिव व्योम कुर्वन्व्योमेव भूतलम् ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रतापोऽग्रे ततः शब्दः परागस्तदनन्तरम् ।  
 ययौ पश्चाद्रथादीति चतुःस्कन्धेव सा चमूः ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मरुपृष्ठान्युदम्भांसि नाव्याः सुप्रतरा नदीः ।  
 विपिनानि प्रकाशानि शक्तिमत्त्वाञ्चकार सः ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स सेनां महतीं कर्षन्पूर्वसागरगामिनीम् ।  
 बभौ हरजटाभ्रष्टां गङ्गामिव भगीरथः ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 त्याजितैः फलमुत्खातैर्भग्नैशअच बहुधा नृपैः ।  
 तस्यासीदुल्बणो मार्गः पादपैरिव दन्तिनः ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पौरस्त्यानेवमाक्रामंस्तांस्ताञ्जनपदाञ्जयी ।  
 प्राप तालीवनश्याममुपकण्ठं महोदधेः ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अनम्राणां समुद्धर्तस्तस्मात्सिन्धुरयादिव ।  
 आत्मा संरक्षितः सुह्यैर्वृत्तिमाश्रित्य वैतसीम् ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वङ्गानुत्खाय तरसा नेता नौसाधनोद्यतान् ।  
 निचखान जयस्तम्भान्गङ्गास्रोतोन्तरेषु सः ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आपादपद्मप्रणताः कलमा इव ते रघुम् ।  
 फलैः संवर्धयामासुरुत्खातप्रतिरोपिताः ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तीर्त्वा कपिशां सैन्यैर्बद्धद्विरदसेतुभिः ।  
 उत्कलादर्शित्प्पथः कलिङ्गाभिमुखो ययौ ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स प्रतापं महेन्द्रस्य मूर्ध्नि तीक्ष्णं न्यवेशयत् ।  
 अङ्कुशं द्विरदस्येव यन्ता गम्भीरवेदिनः ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रतिजग्राह कालिङ्गस्तमस्त्त्रैर्गजसाधनः ।  
 पक्षच्छेदोद्यतं शक्रं शिलावर्षीव पर्वतः ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 द्विषां विषह्य काकुत्स्थस्तत्र नाराचदुर्दिनम् ।  
 सन्मङ्गलस्नात इव प्रतिपेदे जयश्रियम् ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ताम्बूलीनां दलैस्तत्र रचितापानभूमयः ।  
 नारिकेलासवं योधाः शात्रवं च पपुर्यशः ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 गृहीतप्रतिमुक्तस्य स धर्मविजयी नृपः ।  
 श्रियं महेन्द्रनाथस्य जहार न तु मेदिनीम् ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततो वेलातटेनैव फलवत्पूगमालिना ।  
 अगस्त्याचरितामाशामनाशास्यजयो ययौ ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स सैन्यपरिभोगेण गजदानसुगन्धिना ।  
 कावेरीं सरितां पत्युः शङ्कनीयामिवाकरोत् ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 बलैरध्युषितास्तस्य विजिगीषोर्गताध्वनः ।  
 मारीचोद्भ्रान्तहारीता मलयाद्रेरुपत्यकाः ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ससञ्जुरश्वक्षुण्णानामेलानामुत्पतिष्णवः ।  
 तुल्यगन्धिषु मत्तेभकटेषु फलरेणवः ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भोगिवेष्टनमार्गेषु चन्दनानां समर्पितम् ।  
 नास्रसत्करिणां ग्रैवं त्रिपदीच्छेदिनामपि ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिशि मन्दायते तेजो दक्षिणस्यां रवेरपि ।  
 तस्यामेव रघोः पाण्ड्याः प्रतापं न विषेहिरे ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ताम्रपर्णीसमेतस्य मुक्तासारं महोदधेः ।  
 ते निपत्य तदुस्तस्मै यशः स्वमिव संचितम् ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स निर्विश्य यथाकामं तटेष्वालीनचन्दनौ ।  
 स्तनाविव दिशस्तस्याः शैलौ मलयदर्दुरौ ॥ 51 ॥  
 असह्यविक्रमः सह्यं दूरान्मुक्तमुदन्वता ।  
 नितम्बमिव मेदिन्याः स्रस्तांशुकमलङ्घयत् ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 संप्रति प्रतीचीं दिशमभिययावित्याह-  
 तस्यानीकैर्विसर्पद्भिरपरान्तजयोद्यतैः ।  
 रामास्त्त्रोत्सारितोऽप्यासीत्सह्यलग्न इवार्णवः ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भयोत्सृष्टविभूषाणां तेन केरलयोषिताम् ।  
 अलकेषु चमूरेणुश्चूर्णप्रतिनिधीकृतः ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मुरलामारुतोद्धूतमगमत्कैतकं रजः ।  
 तद्योधवारबाणानामयत्नपटवासताम् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अभ्यभूयत वाहानां चरतां गात्रशिञ्जितैः ।  
 वर्मभिः पवनोद्धूतराजतालीवनध्वनिः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 खर्जूरीस्कन्धनद्धानां मदोद्गारसुगन्धिषु ।  
 कटेषु करिणां पेतुः पुंनागेभ्यः शिलीमुखाः ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवकाशं कोलोदन्वान् रामायाभ्यर्थितो ददौ ।  
 अपरान्तमहीपालव्याजेन रघवे करम् ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मत्तेभरदनोत्कीर्णव्यक्तविक्रमलक्षणम् ।  
 त्रिकूटमेव तत्रोञ्चैर्जयस्तम्भं चकार सः ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पारसीकांस्ततो जेतुं प्रतस्थे स्थलवर्त्मा ।  
 इन्द्रियाख्यानिव रिपूंस्तत्त्वज्ञानेन संयमी ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यवनीमुखपद्मानां सेहे मधुमदं न सः ।  
 बालातपमिवाब्जानामकालजलदोदयः ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सङ्ग्रामस्तुमुलस्तस्य पाश्चात्त्यैरश्वसाधनैः ।  
 शार्ङ्गकूजितविज्ञेयप्रतियोधे रजस्यभूत् ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भल्लापवर्जितैस्तेषां शिरोभिः श्मश्रुलैर्महीम् ।  
 तस्तार सरघाव्याप्तैः स क्षौद्रपटलैरिव ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अपनीतशिरस्त्त्राणां शेषास्तं शरणं ययुः ।  
 प्रणिपातप्रतीकारः संरम्भो हि महात्मनाम् ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विनयन्ते स्म तद्योधा मधुभिर्विजयश्रमम् ।  
 आस्तीर्णाजिनरत्नासु द्राक्षावलयभूमिषु ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः प्रतस्थे कौबेरीं भास्वानिव रघुर्दिशम् ।  
 शरैरुस्रैरिवोदीच्यानुद्धरिष्यन् रसानिव ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विनीताध्वश्रमास्तस्य सिन्धुतीरविचेष्टनैः ।  
 दुधुवुर्वाजिनः स्कन्धाँल्लग्न्कुङ्कुमकेसरान् ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्र हूणावरोधानां भर्तृषु व्यक्तविक्रमम् ।  
 कपोलपाटलादेशि बभूव रघुचेष्टितम् ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 काम्बोजाः समरे सोढुं तस्य वीर्यमनीश्वराः ।  
 गजालानपरिक्लिष्टैरक्षोटैः सार्धमानताः ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेषां सदश्वभूयिष्ठास्तुङ्गा द्रविणराशयः ।  
 उपदा विविशुः शश्वन्नोत्सेकाः कोसलेश्वरम् ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततो गौरीगुरुं शैलमारुरोहाश्वसाधनः ।  
 वर्धयन्निव तत्कूटानुद्धूतैर्धातुरेणुभिः ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शशंस तुल्यसत्त्वानां सैन्यघोषेऽप्यसंभ्रमम् ।  
 गुहाशयानां सिंहानां परिवृत्यावलोकितम् ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भूर्जेषु मर्मरीभूताः कीचकध्वनिहेतवः ।  
 गङ्गाशीकरिणो मार्गे मरुतस्तं सिषेविरे ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/73.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विशश्रमुर्नमेरूणां छायास्वध्यास्य सैनिकाः ।  
 दृषदो वासितोत्सङ्गा निषण्णमृगनाभिभिः ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सरलासक्तमातङ्गग्रैवेयस्फुरितत्विषः ।  
 आसन्नोषधयो नेतुर्नक्तमस्नेहदीपिकाः ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्योत्सृष्टनिवासेषु कण्ठरज्जुक्षतत्वचः ।  
 गजवर्ष्म किरातेभ्यः शशंसुर्देवदारवः ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्रेति॥ तत्र हिमाद्रौ रघोः पर्वते भवैः पर्वतीयैः। 'पर्वताञ्च'(पा.4।2।143)इति छप्रत्ययः। गणैरुत्सवसंकेताख्यैः सप्तभिः सह। 'गणानुत्सवसंकेतानजयत्सप्तपाण्डवः' इति महाभारते। नाराचानां बाणविशेषाणां क्षेपणीयानां भिन्दिपालानामश्मनां च निष्पेषेण संघर्षेणोत्पतिता अनला यस्मिंस्तत्तथोक्तम्। 'क्षेपणीयो भिन्दिपालः खङ्गो दीर्घो महाफलः' इति यादवः। घोरं भीमं जन्यं युद्धमभूत्। 'युद्धमायोधनं जन्यम्' इत्यमरः॥ 77 ॥  
 शरैरुत्सवसंकेतान्स कृत्वा विरतोत्सवान् ।  
 जयोदाहरणं बाह्वोर्गापयामास किंनरान् ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 परस्परेण विज्ञातस्तेषूपायनपाणिषु ।  
 राज्ञा हिमवतः सारो राज्ञः सारो हिमाद्रिणा ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्राक्षोभ्यं यशोराशिं निवेश्यावरुरोह सः ।  
 पौसस्त्यतुलितस्याद्रेरादधान इव ह्रियम् ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चकम्पे तीर्णलौहित्ये तस्मिन्प्रागन्ज्योतिषेश्वरः ।  
 तद्गजालानतां प्राप्तैः सह कालागुरुद्रुमैः ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न प्रसेहे स रुद्धार्कमधारावर्षदुर्दिनम् ।  
 रथवर्त्मरजोऽप्यस्य कुत एव पताकिनीम् ॥ 82 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/82.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/82.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमीशः कामरूपाणामत्याखण्डलविक्रमम् ।  
 भेजे भिन्नकटैर्नागैरन्यानुपरुरोध यैः ॥ 83 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/83.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/83.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कामरूपेश्वरस्तस्य हेमपीठाधिदेवताम् ।  
 रत्नपुष्पोपहारेण छायामानर्च पादयोः ॥ 84 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/84.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/84.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति जित्वा दिशो जिष्णुर्न्यवर्तत रथोद्धतम् ।  
 रजो विश्रामयन्राज्ञां छत्रशून्येषु मौलिषु ॥ 85 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/85.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/85.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स विश्वजितमाजह्ने यज्ञं सर्वस्वदक्षिणम् ।  
 आदानं हि विसर्गाय सतां वारिमुचामिव ॥ 86 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/86.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/86.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सत्रान्ते सचिवसखः पुरस्क्रियाभि-  
     र्गुर्वीभिः शमितपराजयव्यलीकान् ।  
 काकुत्स्थश्चिरविरहोत्सुकावरोधान्  
     राजन्यान्स्वपुरनिवृत्तयेऽनुमेने ॥ 87 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/87.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/87.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
   
