--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08.md
@@ -9,391 +9,391 @@ title = "०८"
 दन्तेनोदस्यति क्षोणीं विश्राम्यन्ति फणीश्वराः ॥  
 अथ तस्य विवाहकौतुकं ललितं बिभ्रत एव पार्थिवः ।  
 वसुधामपि हस्तगामिनीमकरोदिन्दुमतीमिवापराम् ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दुरितैरपि कर्तुमात्मसात्प्रयतन्ते नृपसूनवो हि यत् ।  
 तदुपस्थितमग्रहीदजः पितुराज्ञेति न भोगतृष्णया ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अनुभूय वसिष्ठसंभृतैः सलिलैस्तेन सहाभिषेचनम् ।  
 विशदोच्छ्वसितेन मेदिनी कथयामास कृतार्थतामिव ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स बभूव दुरासदः परैर्गुरुणाऽथर्वविदा कृताक्रियः ।  
 पवनाग्निसमागमो ह्ययं सहतिं ब्रह्म यदस्त्रतेजसा ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रघुमेव निवृत्तयौवनं तममन्यन्त नवेश्वरं प्रजाः ।  
 स हि तस्य न केवलां श्रियं प्रतिपेदे सकलान्गुणानपि ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अधिकं शुशुभे शुभंयुना द्वितयेन द्वयमेव संगतम् ।  
 पदमृद्धमजेन पैतृकं विनयेनास्य नवं च यौवनम् ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सदयं बुभुजे महाभुजः सहसोद्वेगमियं व्रजेदिति ।  
 अचिरोपनतां स मेदिनीं नवपाणिग्रहरणां वधूमिव ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अहमेव मतो महीपतेरिति सर्वः प्रकृतिष्वचिन्तयत् ।  
 उदधेरिव निम्नगाशतेष्वभवन्नास्य विमानना क्वचित् ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न खरो न च भूयसा मृदुः पवमानः पृथिवीरुहानिव ।  
 स पुरस्कृतमध्यमक्रमो नमयामास नृपाननुद्धरन् ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ वीक्ष्य रघुः प्रतिष्ठितं प्रकृतिष्वात्मजमात्मवत्तया ।  
 विषयेषु विनाशधर्मसु त्रिदिवस्थेष्वपि निःस्पृहोऽभवत् ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथेति॥ अथ रघुरात्मजं पुत्रमात्मवत्तया। निर्विकारमनस्कतयेत्यर्थथः। 'उदयादिष्वविकृतिर्मनसः सत्त्वमुच्यते। आत्मवान्सत्त्ववानुक्तः'इत्युत्पलमालायाम्। प्रकृतिष्वमात्यादिषु प्रतिष्ठितं रूढमूलं वीक्ष्य ज्ञात्वा विनाशो धर्मो येषां तेषु विनाशधर्मसु। अनित्येष्वित्यर्थः। 'धर्मादनिच्केवलात्'(पा.5।4।124)इत्यनिच्प्रत्ययः समासान्तः। त्रिदिवस्थेषु स्वर्गस्थेष्वपि विषयेषु शब्दादिषु निःस्पृहो निर्गतेच्छोऽभवत् ॥ 10 ॥  
 कुलधर्मश्चायमेवेत्याह-  
 गुणवत्सुतरोपितश्रियः परिणामे हि दिलीपवंशजाः ।  
 पदवीं तरुवल्कवाससां प्रयताः संयमिनां प्रपेदिरे ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमरण्यसमाश्रयोमन्मुखं शिरसा वेष्टनशोभिना सुतः ।  
 पितरं प्रणिपत्य पादयोरपरित्यागमयाचतात्मनः ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रघुरश्रुमुखस्य तस्य तत्कृतवानीप्सितमात्मजप्रियः ।  
 न तु सर्प इव त्वचं पुनः प्रतिपेदे व्यपवर्जितां श्रियम् ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स किलाश्रममन्त्यमाश्रितो निवसन्नावसथे पुराद्बहिः ।  
 समुपास्यत पुत्रभोग्यया स्नुषयेवाविकृतेन्द्रियः श्रिया ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रशमस्थइतपूर्वपार्थिवं कुलमभ्युद्यतनूतनेश्वरम् ।  
 नभसा निभृतेन्दुना तुलामुदितार्केण समारुरोह तत् ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यतिपार्थिवलिङ्गधारिणौ ददृशाते रघुराघवौ जनैः ।  
 अपवर्गमहोदयार्थयोर्भुवमंशाविव धर्मयोर्गतौ ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अजिताधिगमाय मन्त्रिभिर्युयुजे नीतिविशारदैरजः ।  
 अनपायिपदोपलब्धये रघुराप्तैः समियाय योगिभिः ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नृपतिः प्रकृतीरवेक्षितुं व्यवहारासनमाददे युवा ।  
 परिचेतुमुपांशु धारणां कुशपूतं प्रवयास्तु विष्टरम् ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अनयत्प्रभुशक्तिसंपदा वशमेको नृपतीननन्तरान् ।  
 अपरः प्रणिधानयोग्यया मरुतः पञ्च शरीरगोचरान् ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अकरोदचिरेश्वरः क्षितौ द्विषदारम्भफलानि भस्मसात् ।  
 इतरो दहने स्वकर्मणां ववृते ज्ञानमयेन वह्निना ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पणबन्धमुखान्गुणानजः षडुपायुङ्क्त समीक्षअय तत्फलम् ।  
 रघुरप्यजयद्गुणत्रयं प्रकृतिस्थं समलोष्टकाञ्चनः ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न नवः प्रभुरा फळलोदयात्स्थिरकर्मा विरराम कर्मणः ।  
 न च योगविधेर्नवेतरः स्थिरधीरा परमात्मदर्शनात् ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति शत्रुषु चेन्द्रियेषु च प्रतिषिद्धप्रसरेषु जाग्रतौ ।  
 प्रसितावुदयापवर्गयोरुभयीं सिद्धिमुभाववापतुः ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ काश्चिदजव्यपेक्षया गमयित्वा समदर्शनः समाः ।  
 तमसः परमापदव्ययं पुरुषं योगसमाधिना रघुः ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 श्रउतदेहविसर्जनः पितुश्चिरमश्रूणि विमुच्य राघवः ।  
 विदधे विधिमस्य नैष्ठिकं यतिभिः सार्धमनग्निमग्निचित् ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अकरोत्स तदौर्ध्वदैहिकं पितृभक्त्या पितृकार्यकल्पवित् ।  
 न हि तेन तथा तनुत्यजस्तनयावर्जितपिण्डकाङ्क्षिणः ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स परार्ध्यगतेरशोच्यतां पितुरुद्दिश्य सदर्थवेदिभिः ।  
 शमिताधिरधिज्यकार्मुकः कृतवानप्रतिशासनं जगत् ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्षितिरिन्दुमती च भामिनी पतिमासाद्यत तमग्र्यपौरुषम् ।  
 प्रथमा बहुरत्नसूरभूदपरा वीरमजीजनत्सुतम् ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 किंनामकोऽसावत आह-  
 दशरश्मिशतोपमद्युतिं यशसा दिक्षु दशस्वपि श्रुतम् ।  
 दशपूर्वरथं यमाख्यया दशकण्ठारिगुरुं विदुर्बुधाः ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ऋषिदेवगणस्वधाभुजां श्रुतयागप्रसवैः स पार्थिवः ।  
 अनृणत्वमुपेयिवान्बभौ परिधेर्मुक्त इवोष्णदीधितिः ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 बलमार्तभयोपशान्तये विदुषां सत्कृतये बहु श्रुतम् ।  
 वसु तस्य विभोर्न केवलं गुणवत्तापि परप्रयोजना ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स कदाचिदवेक्षितप्रजः सह देव्या विजहार सुप्रजाः ।  
 नगरोपवने शचीसखो मरुतां पालयितेव नन्दने ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ रोधसि दक्षिणोदधेः श्रितगोकर्णनिकेतमीश्वरम् ।  
 उपवीणयितुं ययौ रवेरुदयावृत्तिपथेन नारदः ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुसुमैर्ग्रथितामपार्थिवैः स्रजमातोद्यशिरोनिवेशिताम् ।  
 अहरत्किल तस्य वेगवानधिवासस्पृहयेव मारुतः ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भ्रमरैः कुसुमानुसारिभिः परिकीर्णा परिवादिनी मुनेः ।  
 ददृशे पवनावलेपजं सृजती बाष्पमिवाञ्जनाविलम् ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अभिभूय विभूतिमार्तवीं मधुगन्धातिशयेन वीरुधाम् ।  
 नृपतेरमरस्रगाप सा दयितोरुस्तनकोटिसुस्थितिम् ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्षणमात्रसखीं सुजातयोः स्तनयोस्तामत्रलोक्य विह्वला ।  
 निमिमील नरोत्तमप्रिया हृतचन्द्रा तमसेव कौमुदी ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वपुषा करणोज्झितेन सा निपतन्ती पतिमप्यपातयत् ।  
 ननु तैलनिषेकबिन्दुना सह दीपार्चिरुपैति मेदिनीम् ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उभयोरपि पार्श्ववर्तिनां तुमुलेनार्तिरवेण विजिताः ।  
 विहगाः कमलाकरालयाः समदुःखा इव तत्र चुक्रुशुः ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नृपतेर्व्यजनादिभिस्तमो नुनुदे सा तु तथैव संस्थिता ।  
 प्रतिकारविधानमायुषः सति शेषे हि फलाय कल्पते ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रतियोजयितव्यवल्लकीसमवस्थामथ सत्त्वविप्लवात् ।  
 स निनाय नितान्तवत्सलः परिगृह्योचितमङ्कमङ्गनाम् ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पतिरङ्कनिषण्णया तया करणापायविभिन्नवर्णया ।  
 समलक्ष्यत बिभ्रदाविलां मृगलेखेमुषसीव चन्द्रमाः ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विललाप स बाष्पगद्गदं सहजामप्यपहाय धीरताम् ।  
 अभितप्तमयोऽपि मार्दवं भजते कैव कथा शरीरिषु ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुसुमान्यपि गात्रसंगमात्प्रभवन्त्यायुरपोहितुं यदि ।  
 न भविष्यति हन्त साधनं किमिवान्यत्प्रहरिष्यतो विधेः ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथवा मृदु वस्तु हिंसितुं मृदुनैवारभते प्रजान्तकः ।  
 हिमसेकविपत्तिरत्र मे नलिनी पूर्वनिदर्शनं मता ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्रगियं यदि जीवितापहा हृदये किं निहिता न हन्ति माम् ।  
 विषमप्यमृतं क्वचिद्भवेदमृतं वा विषमीश्वरेच्छया ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथवा मम भाग्यविप्लवादशनिः कल्पित एष वेधसा ।  
 यदनेन तरुर्न पातितः क्षपिता तद्विटपाश्रिता लता ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कृतवत्यसि नावधीरणामपराद्धेऽपि यदा चिरं मयि ।  
 कथमेकपदे निरागसं जनमाभाष्यमिमं न मन्यसे? ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ध्रुवमस्मि शठः शुचिस्मिते! विदितः कैतववत्सलस्तव ।  
 परलोकमसंनिवृत्तये यदनापृच्छ्य गतासि मामितः ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दयितां यदि तावदन्वगाद्विनिवृत्तं किमिदं तया विना ।  
 सहतां हतजीवितं मम प्रबलामात्मकृतेन वेदनाम् ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सुरतश्रमसंभृतो मुखे ध्रियते स्वेदलवोद्गमोऽपि ते ।  
 अथ चास्तमिता त्वमात्मना धिगिमां देहभृतामसारताम् ॥ श्र.51 ॥  
 सुरतेति॥ सुरतश्रमेण संभृतो जनितः स्वेदलवोद्गमोऽपि ते तव मुखे ध्रियते वर्तते। अथ च त्वमात्मना स्वरूपेणास्तं प्राप्ताः। अतः कारणाद्देहभृतां प्राणिनामिमां प्रत्यक्षामसारतामस्थिरतां धिक् ॥ 51 ॥  
 मनसापि न विप्रियं मया कृतपूर्वं तव किं जहासि माम्? ।  
 ननु शब्दपतिः क्षितेरहं त्वयि मे भावनिबन्धना रतिः ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुसुमोत्स्वचितान्वलीभृतश्चलयन्भृङ्गरुचस्तवालकान् ।  
 करभोरु! करोति मारुतस्त्वदुपावर्तनशङ्कि मे मनः ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदपोहितुमर्हसि प्रिये! प्रतिबोधेन विषादमाशु मे ।  
 ज्वलितेन गुहागतं तमस्तुहिनाद्रेरिव नक्तमोषधिः ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इदमुच्छ्वसितालकं मुखं तव विश्रान्तकथं दुनोति माम् ।  
 निशि सुप्तमिवैकपङ्कजं विरताभ्यन्तरषट्पदस्वनम् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शशिनं पुरनेति शर्वरी दयिता द्वन्द्वचरं पतत्रिणम् ।  
 इति तौ विरहान्तरक्षमौ कथमत्यन्तगता न मां दहेः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नवपल्लवसंस्तरेऽपि ते मृदु दूयेत यदङ्गमर्पितम् ।  
 तदिदं विषहिष्यते कथं वद वामोरु! चिताधिरोहणम् ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इयमप्रतिबोधशायिनीं रशना त्वां प्रथमा रहःसखी ।  
 गतिविभ्रमसादनीरवा न शुचा नानु मृतेन वक्ष्यते ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कलमन्यभृतासु भाषितं कलहंसीषु मदालसं गतम् ।  
 पृषतीषु विलोलमीक्षितं पवनाधूतलतासु विभ्रमाः ॥ 59 ॥  
 त्रिदिवोत्सुकयाप्यवेक्ष्य मां निहिताः सत्यममी गुणास्त्वया ।  
 विरहे तव मे गुरुव्यथं हृदयं न त्ववलम्बितुं क्षमाः ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अविधाय विवाहसत्क्रियामनयोर्गम्यत इत्यसांप्रतम् ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुसुमं कृतदोहदस्त्वया यदशोकोऽयतमुदीरयिष्यति ।  
 अलकाभरणं कथं नु तत्तव नेष्यामि निवापमाल्यताम्? ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्मरतेव सशब्दनूपुरं चरणानुग्रहमन्यदुर्लभम् ।  
 अमुना कुसुमाश्रुवर्षिणा त्वमशोकेन सुगात्रि! शोच्यसे ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तव निःश्वसितानुकारिभिर्बकुलैरर्धचितां समं मया ।  
 असमाप्य विलासमेखलां किमिदं किन्नरकण्ठि! सुप्यते? ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 समदुःखसुखः सखीजनः प्रतिपञ्चन्द्रनिभोऽयमात्मजः ।  
 अहमेकरसस्तथापि ते व्यवसायः प्रतिपात्तिनिष्ठुरः ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 धृतिरस्तमिता रतिश्च्युता विरतं गेयमृतुर्निरुत्सवः ।  
 गतमाभरणप्रयोजनं परिशून्यं शयनीयमद्य मे ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 गृहीणी सचिवः सखी मिथः प्रियशिष्या ललिते कलाविधौ ।  
 करुणाविमुखेन मृत्युना हरता त्वां वद किं न मे हृतम् ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मदिराक्षि! मदाननार्पितं मधु पीत्वा रसवत्कथं नु मे ।  
 अनुपास्यसि बाष्पदूषितं परलोकोपनतं जलाञ्जलिम् ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विभवेऽपि सति त्वया विना सुखमेतावदजस्य गण्यताम् ।  
 अहृतस्य विलोभनान्तरैर्मम सर्वे विषयास्त्वदाश्रयाः ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विलपन्निति कोसलाधिपः करुणार्थग्रथितं प्रियां प्रति ।  
 अकरोत्पृथिवीरुहानपि स्रुतशाखारसबाष्पदूषितान् ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ तस्य कथंचिदङ्कतः स्वजनस्तामपनीय सुन्दरीम् ।  
 विससर्ज तदन्त्यमण्डनामनलायागुरुचन्दनैधसे ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रमदामनु संस्थितः शुचा नृपतिः सन्निति वाच्यदर्शनात् ।  
 न चकार शरीरमग्निसात्सह देव्या न तु जीविताशया ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ तेन दशाहतः परे गुणशेषामपदिश्य भामिनीम् ।  
 विदुषा विधयो महर्द्धयः पुर एवोपवने समापिताः ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/73.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स विवेश पुरीं तया विना क्षणदापायशशाङ्कदर्शनः ।  
 परिवाहमिवावलोकयन्स्वशुचः पौरवधूमुखाश्रुषु ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ तं सवनाय दीक्षितः प्रणिधानाद्गुरुराश्रमस्थितः ।  
 अभिषङ्गजडं विजज्ञिवानिति शिष्येण किलान्वबोधयत् ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वसिष्ठशिष्य आह-  
 असमाप्तविधिर्यतो मुनिस्तव विद्वानपि तापकारणम् ।  
 न भवन्तमुपस्थितः स्वयं प्रकृतौ स्थापयितुं पथश्च्युतम् ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मयि तस्य सुवृत्त! वर्तते लघुसंदेशपदा सरस्वती ।  
 श्रृणु विश्रुतसत्त्वसार! तां हृदि चैनामुपधातुमर्हसि ॥ 77 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/77.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/77.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वक्ष्यमाणार्थानुगुणं मुनेः सर्वज्ञत्वं तावदाह-  
 पुरुषस्य पदेष्वजन्मनः समतीतं च भवञ्च भावि च ।  
 स हि निष्प्रतिधेन चक्षुषा त्रितयं ज्ञानमयेन पश्यति ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चरतः किल दुश्चरं तपस्तृणबिन्दोः परिशङ्कितः पुरा ।  
 प्रजिघाय समाधिभेदिनीं हरिरस्मै हरिणीं सुराङ्गनाम् ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तपःप्रतिबन्धमन्युना प्रमुखाविष्कृतचारुविभ्रमाम् ।  
 अशपद्भव मानुषीति तां शमवेलाप्रलयोर्मिणा भुवि ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भगवन्! परवानयं जनः प्रतिकूलाचरितं क्षमस्व मे ।  
 इति चोपनतां क्षितिस्पृशं कृतवाना सुरपुष्पदर्शनात् ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्रथकैशिकवंशसंभवा तव भूत्वा महिषी चिराय सा ।  
 उपलब्धवती दिवश्च्युतं विवशा शापनिवृत्तिकारणम् ॥ 82 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/82.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/82.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदलं तदपायचिन्तया विपदुत्पत्तिमतामुपस्थिता ।  
 वसुधेयमवेक्ष्यतां त्वया वसुमत्या हि नृपाः कलत्रिणः ॥ 83 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/83.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/83.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उदये मदवाच्यमुज्झता श्रुतमाविष्कृतमात्मवत्त्वया ।  
 मनसस्तदुपस्थिते ज्वरे पुनरक्लीबतया प्रकाश्यताम् ॥ 84 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/84.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/84.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रुदता कुत एव सा पुनर्भवता नानुमृतापि लभ्यते ।  
 परलोकजुषां स्वकर्मभिर्गतयो भिन्नपथा हि देहिनाम् ॥ 85 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/85.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/85.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अपशोकमनाः कुटुम्बिनीमनुगृह्णीष्व निवापदत्तिभिः ।  
 स्वजनाश्रु किलातिसंततं दहति प्रेतमिति प्रचक्षते ॥ 86 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/86.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/86.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मरणं प्रकृतिः शरीरिणां विकृतिर्जीवितमुच्यते बुधैः ।  
 क्षणमप्यवतिष्ठते श्वसन्यदि जन्तुर्ननु लाभवानसौ ॥ 87 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/87.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/87.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवगच्छति मूढचेतनः प्रियनाशं हृदि शल्यमर्पितम् ।  
 स्थिरधीस्तु तदेव मन्यते कुशलद्वारतया समुद्धृतम् ॥ 88 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/88.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/88.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्वशरीरशरीरिणावपि श्रुतसंयोगविपर्ययौ यदा ।  
 विरहः किमिवानुतापयेद्वद बाह्यैर्विषयैर्विपश्चितम् ॥ 89 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/89.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/89.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न पृथग्जनवच्छुचो वशं वशिनामुत्तम! गन्तुमर्हसि ।  
 द्रुमसानुमतां किमन्तरं यदि वायौ द्वितयेऽपि ते चलाः ॥ 90 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/90.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/90.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तथेति विनेतुरुदारमतेः प्रतिगृह्य वचो विससर्ज मुनिम् ।  
 तदलब्धपदं हृदि शोकघने प्रतियातमिवान्तिकमस्य गुरोः ॥ 91 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/91.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/91.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेनाष्टौ परिगमिताः समाः कथंचिद्वालत्वादवितथसूनृतेन सूनोः ।  
 सादृश्यप्रतिकृतिदर्शनैः प्रियायाः स्वप्नेषु क्षणिकसमागमोत्सवैश्च ॥ 92 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/92.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/92.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यता प्रसह्य हृदयं किल शोकशङ्कुः  
      प्लक्षप्ररोह इव सौधतलं बिभेद ।  
 प्राणान्तहेतुमपि तं भिषजामसाध्यं  
        लाभं प्रियानुगमने त्वरया स मेने ॥ 93 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/93.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/93.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सम्यग्विनीतमथ वर्महरं कुमार-  
       मादिश्य रक्षणविधौ विधिवत्प्रजानाम् ।  
 रोगापसृष्टतनुदुर्वसतिं मुमुक्षुः  
       प्रायोपवेशनमतिर्नृपतिर्बभूव ॥ 94 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/94.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/94.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तीर्थे तोयव्यतिकरभवे जह्नुकन्यासरय्वो-  
      र्देहत्यागादमरगणनालेख्यमासाद्य सद्यः ।  
 पूर्वाकाराधिकतररुचा संगतः कान्तयासौ  
       लीलागारेष्वरमत पुनर्नन्दनाभ्यन्तरेषु ॥ 95 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/95.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/95.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीविनीसमाख्यायां रघुवंशव्याख्यायामष्टमः सर्गः ।  
    
