--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09.md
@@ -9,280 +9,280 @@ title = "०९"
 नीलार्धं नीलकण्ठार्धं महः किमपि मन्महे ॥  
 पितुरनन्तरमुत्तरकोसलान्समधिगम्य समाधिजितेन्द्रियः ।  
 दशरथः प्रशशास महारथो यमवतामवतां च धुरि स्थितः ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अधिगतं विधिवद्यदपालयत्प्रकृतिमण्डलमात्मकुलोचितम् ।  
 अभवदस्य ततो गुणवत्तरं सनगरं नगरन्ध्रुकरौजसः ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उभयमेव वदन्ति मनीषिणः समयवर्षितया कृतकर्मणाम् ।  
 बलनिषूदनमर्थपतिं च तं श्रमनुदं मनुदण्डधरान्वयम् ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जनपदे न गदः पदमादधावभिभवः कुत एव सपत्नजः ।  
 क्षितिरभूत्फलवत्यजनन्दने शमरतेऽमरतेजसि पार्थिवे ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दशदिगन्तजिता रघुणा यथआ श्रइयमपुष्यदजेन ततः परम् ।  
 तमधिगम्य तथैव पुनर्बभौ न न महीनमहीनपराक्रमम् ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
  समतया वसुवृष्टिविसर्जनैर्नियमनादसतां च नराधिपः ।  
 अनुययौ यमपुण्यजनेश्वरौ सवरुणावरुणाग्रसरं रुचा ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य व्यसनासक्तिर्नासीदित्याह-  
 न मृगयाभिरतिर्न दुरोदरं न च शशिप्रतिमाभरणं मधु ।  
 तमुदयाय न वा नवयौवना प्रियतमा यतमानमपाहरत् ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न कृपणा प्रभवत्यपि वासवे न वितथा परिहासकथास्वपि ।  
 न च सपत्नजनेष्वपि तेन वागपरुषा परुषाक्षरमीरिता ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उदयमस्तमयं च रघूद्वहादुभयमानशिरे वसुधाधिपाः ।  
 स हि निदेशमलङ्घयतामभूत्सुहृदयोहृदयः प्रतिगर्जताम् ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अजयदेकरथेन स मेदिनीमुदधिनेमिमधिज्यशरासनः ।  
 जयमघोषयदस्य तु केवलं गजवती जवतीव्रहया चमूः ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवनिमेकरथेन वरूथिना जितवतः किल तस्य धनुर्भृतः ।  
 विजयदुन्दुभितां ययुरर्णवा घनरवा नरवाहनसंपदः ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शमितपक्षबलः शतकोटिना शिखरिणां कुलिशेन पुरंदरः ।  
 स शरवृष्टिमुचा धनुषा द्विषां स्वनवता नवतामरसाननः ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/12.md"  newLevelForH1="4" includeTitle="true"> </div>
    
 चरणयोर्नखरागसमृद्धिभिर्मुकुटरन्तमरीचिभिरस्पृशन् ।  
 नृपतयः शतशो मरुतो यथा शतमखं तमखण्डितपौरुषम् ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निववृते स महार्णवरोधसः सचिवकारितबालसुताञ्जलीन् ।  
 समनुकम्प्य सपत्नपरिग्रहाननलकानलकानवमां पुरीम् ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपगतोऽपि च मण्डलनाभितामनुभितामनुदितान्यसितातपवारणः ।  
 श्रियमवेक्ष्य स रन्ध्रचलामभूदनलसोऽनलसोमसमद्युतिः ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमपहाय ककुत्स्थकुलोद्भवं पुरुषमात्मभवं च पतिव्रता ।  
 नृपतिमन्यमसेवत देवता सकमला कमलाघवमर्थिषु ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमलभन्त पतिं पतिदेवताः शिखरिणामिव सागरमापगाः ।  
 मगधकोसलकेकयशासिनां दुहितरोऽहितरोपितमार्गणम् ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रियतमाभिरसौ तिसृभिर्बभौ तिसृभिरेव भुवं सह शक्तिभिः ।  
 उपगतो विनिनीषुरिव प्रजा हरिहयोऽरिहयोगविचक्षणः ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स किल संयुगमूर्ध्नि सहायतां मघवतः प्रतिपद्य महारथः ।  
 स्वभुजवीर्यमगापयदुच्छ्रितं सुरवधूरवधूतभयाः शरैः ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्रतुषु तेन विसर्जितमौलिना भुजसमाहृतदिग्वसुना कृताः ।  
 कनकयूपसमुच्छ्रयशोभिनो वितमसा तमसासरयूतटाः ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अजिनदण्डभृतं कुशमेखलां यतगिरं मृगश्रृङ्गपरिग्रहाम् ।  
 अधिवसंस्तनुमध्वरदीक्षितामसमभासमभासयदीश्वरः ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अवभृथप्रयतो नियतेन्द्रियः सुरसमाजसमाक्रमणोचितः ।  
 नमयति स्म स केवलमुन्नतं वनमुचे नमुचेररये शिरः ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 असकृदेकरथेन तरस्विना हरिहयाग्रसरेण धनुर्भृता ।  
 दिनकराभिमुखा रणरेणवो रुरुधिरे रुधिरेण सुरद्विषाम् ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ समाववृते कुसुमैर्नवैस्तमिव सेवितुमेकनराधिपम् ।  
 यमकुबेरजसेश्वरवज्रिणां समधुरं मधुरञ्चितविक्रमम् ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जिगमिषुर्धनदाध्युषितां दिशं रथयुजा परिवर्तितवाहनः ।  
 दिनमुखानि रविर्हिमनिग्रहैर्विमलयन्मलयं नगमत्यजत् ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुसुमजन्म ततो नवपल्लवास्तदनु षट्पदकोकिलकूजितम् ।  
 इति यथाक्रममाविरभून्मधुद्रुमवतीमवतीर्य वनस्थलीम् ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नयगुणोपचितामिव भूपतेः सदुपकारफलां श्रियभर्थिनः ।  
 अभिययुः सरसो मधुसंभृतां कमलिनीमलिनीरपतत्रिणः ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुसुममेव न केवलमार्तवं नवमशोकतरोः स्मरदीपनम् ।  
 किसलयप्रसवोऽपि विलासिनां मदयिता दयिताश्रवणार्पितः ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 विरचिता मधुनोपवनश्रियामभिनवा इव पत्रविशेषकाः ।  
 मधुलिहां मधुदानविशारदाः कुरबका रवकारणतां ययुः ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सुवदनावदनासवसंभृतस्तदनुवादिगुणः कुसुमोद्गमः ।  
 मधुकरैरकरोन्मधुलोलुपैर्बकुलमाकुलमायतपङ्क्तिभिः ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपहितं शिशिरापगमश्रिया मुकुलजालमशोभत किंशुके ।  
 प्रणयिनीव नखक्षतमण्डनं प्रमदया मदयापितलज्जया ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 व्रणगुरुप्रमदाधरदुःसहं जघननिर्विशषयीकृतमेखलम् ।  
 न खलु तावदशेषमपोहितुं रविरलं विरलं कृतवान्हिमम् ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अभिनयान्परिचेतुमिवोद्यता मलयमारुतकम्पितपल्लवा ।  
 अमदयत्सहकारलता मनः सकलिका कलिकामजितामपि ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रथममन्यभृताभिरुदीरिताः प्रविरला इव मुग्धवधूकथाः ।  
 सुरभिगन्धिषु शुश्रुविरे गिरः कुसुमितासु मिता वनराजिषु ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्रुतिसुखभ्रमरस्वनगीतयः कुसुमकोमलदन्तरुचो बभुः ।  
 उपवनान्तलताः पवनाहतैः किसलयैः सलयैरिव पाणिभिः ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/35.md"  newLevelForH1="4" includeTitle="true"> </div>
      
 ललितविभ्रमबन्धविचक्षणं सुरभिगन्धपराजितकेसरम् ।  
 पतिषु निर्विविशुर्मधुमङ्गनाः स्मरसखं रसखण्डनवर्जितम् ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शुशुभिरे स्मितचारुतराननाः स्त्रिय इव श्लथशिञ्जितमेखलाः ।  
 विकचतामरसा गृहदीर्घिका मदकलोदकलोलविहंगमाः ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपययौ तनुतां मधुखण्डिता हिमकरोदयपाण्डुमुखच्छविः ।  
 सदृशमिष्टसमागमनिर्वृतिं वनितयानितया रजनीवधूः ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अपतुषारतया विशदप्रभैः सुरतसङ्गपरिश्रमनोदिभिः ।  
 कुसुमचापमतेजयदंशुभिर्हिमकरो मकरोर्जितकेतनम् ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 हुतहुताशनदीप्ति वनश्रियः प्रतिनिधिः कणकाभरणस्य यत् ।  
 युवतयः कुसुमं दधुराहितं तदलके दलकेसरपेशलम् ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अलिभिरञ्जनबिन्दुमनोहरैः कुसुमपङ्क्तिनिपातिभिरङ्कितः ।  
 न खलु शोभयति स्म वनस्थलीं न तिलकस्तिलकः प्रमदामिव ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अमदयन्मधुगन्धसनाथया किसलयाधरसंगतया मनः ।  
 कुसुमसंभृतया नवमल्लिका स्मितरुचा तरुचारुविलासिनी ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अरुणरागनिषेधिभिरंशुकैः श्रवणलब्धपदैश्च यवाङ्कुरैः ।  
 परभृताविरुतैश्च विलासिनः स्मरबलैरबलैकरसाः कृताः ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपचितावयवा शुचिभिः कणैरलिकदम्बकयोगमुपेयुषी ।  
 सदृशकान्तिरलक्ष्यत मञ्जरी तिलकजालकजालकमौक्तिकैः ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ध्वजपटं मदनस्य धनुर्भृतश्छविकरं मुखचूर्णमृतुश्रियः ।  
 कुसुमकेसररेणुमलिव्रजाः सपवनोपवनोत्थितमन्वयुः ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अनुभवन्नवदोलमृतूत्सवं पटुरपि प्रियकण्ठजिघृक्षया ।  
 अनयदासनरज्जुपरिग्रहे भुजलतां जलतामवलाजनः ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 त्यजत मानमालं बत विग्रहैर्न पुनरेति गतं चतुरं वयः ।  
 परभृताभिरितीव निवेदिते स्मरमते रमते स्म वधूजनः ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ यथासुखमार्तवमुत्सवं समनुभूय विलासवतीसखः ।  
 नरपतिश्चकमे मृगयारतिं स मधुमन्मधुमन्मथसंनिभः ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 परिचयं चललक्ष्यनिपातने भयरुषोश्च तदिङ्गितवोधनम् ।  
 श्रमजयात्प्रगुणां च करोत्यसौ तनुमतोऽनुमतः सचिवैर्ययौ ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मृगवनोपगमक्षमवेषमृद्विपुलकण्ठनिषक्तशरासनः ।  
 गगनमश्वखुरोद्धतरेणुभिर्नृसविता स वितानमिवाकरोत् ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ग्रथितमौलिरसौ वनमालया तरुपलाशसवर्णतनुच्छदः ।  
 तुरगवल्गनचञ्चलकुण्डलो विरुरुचे रुरुचेष्टितभूमिषु ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तनुलताविनिवेशितविग्रहा भ्रमरसंक्रमितेक्षणवृत्तयः ।  
 ददृशुरध्वनि तं वनदेवताः सुनयनं नयनन्दितकोसलम् ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्वगणिवागुरिकैः प्रथमास्थितं व्यपगतानलदस्यु विवेश सः ।  
 स्थिगतुरंगमभूमि निपानवन्मृगवयोगवयोपचितं वनम् ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ नभस्य इव त्रिदशायुधं कनकपिङ्गतडिद्गुणसंयुतम् ।  
 धनुरधिज्यमनाधिरुपाददे नरवरो रवरोषितकेसरी ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य स्तनप्रणयिभिर्मुहुरेणशावैर्व्याहन्यमानहरिणीगमनं पुरस्तात् ।  
 आविर्बभूव कुशगर्भमुखं मृगाणां यूथं तदग्रसरगर्वितकृष्णसारम् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्प्रार्थितं जवनवाजिगतेन राज्ञा  
        तूर्णीमुखोद्धृतशरेण विशीर्णपङ्क्ति ।  
 श्यामीचकार वनमाकुलदृष्टिपातै-  
        र्वातेरितोत्पलदलप्रकरैरिवार्द्रैः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 लक्ष्यीकृतस्य हरिणस्य हरिप्रभावः   
       प्रेक्ष्य स्थितां सहचरीं व्यवधाय देहम् ।  
 आकर्णकृष्टमपि कामितया स धन्वी  
        बाणं कृपामृदुमनाः प्रतिसंजहार ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यापरेष्वपि मृगेषु शरान्मुमुक्षोः  
     कर्णान्तमेत्य बिभिदे निबिडोऽपि मुष्टिः ।  
 त्रासातिमात्रचटुलैः स्मरतः सुनेत्रैः  
      प्रौढप्रियानयनविभ्रमचेष्टितानि ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उत्तस्थुषः सपदि पल्वलपङ्कमध्या-  
     न्मुस्ताप्ररोहकवलावयवानुकीर्णम् ।  
 जग्राह स द्रुतवराहकुलस्य मार्गं  
       सुव्यक्तमार्द्रपदपङ्क्तिभिरायताभिः ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं वाहनादवनतोत्तरकायमीष-  
      द्विध्यन्तमुद्धृतसटाः प्रतिहन्तुमीषुः ।  
 नात्मानमस्य विविदुः सहसा वराहा  
       वृक्षेषु विद्धमिषुभिर्जघनाश्रयेषु ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेनाभिघातरभसस्य विकृष्य पत्री  
       वन्यस्य नेत्रविवरे महिषस्य मुक्तः ।  
 निर्भिद्य विग्रहमशोणितलिप्तपुङ्ख-  
       स्तं पातयां प्रथममास पपात पश्चात् ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रायो विषाणपरिमोक्षलघूत्तमाङ्गा-  
       न्खङ्गांश्चकार नृपतिर्निक्षितैः क्षुरप्रैः ।  
 श्रृङ्गं स दृप्तविनयाधिकृतः परेषा-  
       मत्युच्छ्रितं न ममृषे न तु दीर्घमायुः ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 व्याघ्रनभीरभिमुखोत्पतितान्गुहाभ्यः  
      फुल्लासनाग्रविटपानिव वायुरुग्णान् ।  
 शिक्षाविशेषलघुहस्ततया निमेषा-  
       त्तूणीचकार शरपूरितवक्त्ररन्ध्रान् ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निर्घातोग्नैः कुञ्जलीनाञ्जिघांसुर्ज्यानिर्घोषैः क्षोभयामास सिंहान् ।  
 नूनं तेपामभ्यसृयापरोऽभूद्वीर्योदग्रे राजशब्दो मृगेषु ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तान्हत्वा गजकुलबद्धतीव्रवैरान्काकुस्थः कुटिलनखाग्रलग्नमुक्तान् ।  
 आत्मानं रणकृतकर्मणां गजानामानृण्यं गतमिव मार्गणैरमंस्त ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चमरान्परितः प्रवर्तिताश्वः क्वचिदाकर्णविकृष्टभल्लवर्षी ।  
 नृपतीनिव तान्वियोज्य सद्यः सितबालव्यजनैर्जगाम शान्तिम् ॥ (.66 ॥  
@@ -291,79 +291,79 @@ title = "०९"
        न स रुचिरकलापं बाणलक्ष्यीचकार ।  
 सपदि गतमनस्कश्चित्रमाल्यानुकीर्णे  
        रतिविगलितबन्धे केशपाशे प्रियायाः ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य कर्कशविहारसंभवं स्वेदमाननविलग्नजालकम् ।  
 आचचाम सतुषारशीकरो भिन्नपल्लवपुटो वनानिलः ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति विस्मृतान्यकरणीयमात्मनः सचिवावलम्बिधुरं धराधिपम् ।  
 परिवृद्धरागमनुबन्धसेवया मृगया जहार चतुरेव कामिनी ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स ललितकुसुमप्रवालशय्यां ज्वलितमहौषधिदीपिकासनाथम् ।  
 नरपतिरतिवाहयांबभूव क्वचिदसमेतपरिच्छदस्त्रियामाम् ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उषसि स गजयूथकर्णतालैः पटुपटहध्वनिभिर्विनीतनिद्रः ।  
 अरमत मधुराणि तत्र श्रृण्वन्विहगविकूजितबन्दिमङ्गलानि ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ जातु रुरोर्गृहीतवर्त्मा विपिने पार्श्वचरैरलक्ष्यमाणः ।  
 श्रमफेनमुचा तपस्विगाढां तमसां प्राप नदीं तुरंगमेण ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कुम्भपूरणभवः पटुरुञ्चैरुञ्चचार निनदोऽम्भसि तस्याः ।  
 तत्र स द्विरदबृंहितशङ्की शब्दपातिनमिषुं विससर्ज ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/73.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नृपतेः प्रतिषिद्धमेव तत्कृतवान्पङ्क्तिरथो विलङ्घ्य यत् ।  
 अपथे पदमर्पयन्ति हि श्रुतवन्तोऽपि रजोनिमीलिताः ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 हा तातेति क्रन्दितमाकर्ण्य विषण्ण-  
        स्तस्यान्विष्यन्वेतसगूढं प्रभवं सः ।  
 शल्यप्रोतं प्रेक्षअय सकुम्भं मुनिपुत्रं  
         तापादन्तःशल्य इवासीत्क्षितिपोऽपि ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेनावतीर्य तुरगात्प्रथितान्वयेन  
      पृष्टान्वयः स जलकुम्भनिषण्णदेहः ।  
 तस्मै द्विजेतरतपस्विसुतं स्खलद्भि-  
      रात्मानमक्षरपदैः कथयांबभूव ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तञ्चोदितः स तमनुद्धृतशल्यमेव पित्रोः सकाशमवसन्नदृशोर्निनाय ।  
 ताभ्यां तथागतमुपेत्य तमेकपुत्रमज्ञानतः स्वचरितं नृपतिः शशंस ॥ 77 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/77.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/77.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तौ दंपती बहु विलप्य शिशोः प्रहर्त्रा  
 शल्यं निखातमुदहारयतामुरास्तः ।  
 सोऽभूत्परासुरथ भूमिपतिं शशाप  
 हस्तार्पितैर्नयनवारिभिरेव वृद्धः ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दिष्टान्तमाप्स्यति भवानपि पुत्रशोका-  
 दन्त्ये वयस्यहमिवेति तमुक्तवन्तम् ।  
 आक्रान्तपूर्वमिव मुक्तविषं भुजंगं  
 प्रोवाच कोसलपतिः प्रथमापराद्धः ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शापोऽप्यदृष्टतनयाननपद्मशोभे  
 सानुग्रहो भगवता मयि पातितोऽयम् ।  
 कृष्यां दहन्नपि खलु क्षितिमिन्धनेद्धो  
 बीजप्ररोहजननीं ज्वलनः करोति ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इत्थं गते गतघृणः किमयं विधत्तां वध्यस्तवेत्यभिहितो वसुधाधिपेन ।  
 एधान्हुताशनवतः स मुनिर्ययाचे पुत्रं परासुमनुगन्तुमनाः सदारः ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्राप्तानुगः सपदि शासनमस्य राजा  
 संपाद्य पातकविलुप्तधृतिर्निवृत्तः ।  
 अन्तर्निविष्टपदमात्मविनाशहेतुं  
 शापं दधज्ज्वलनमौर्वमिवाम्बुराशिः ॥ 82 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/82.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/82.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीविनीसमाख्यायां रघुवंशटीकायां नवमः सर्गः ॥  
 
