--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14.md
@@ -9,358 +9,358 @@ title = "१४"
 शशाङ्कपङ्केरुहयोः समानं रामस्य वन्दे रमणीयमास्यम् ॥  
 भर्तुऋ प्रणाशादथ शोचनीयं दशान्तरं तत्र समं प्रपन्ने ।  
 अपश्यतां दाशरथी जनन्यौ छेदादिवोपघ्नतरोर्व्रतत्यौ ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उभावुभाभ्यां प्रणतौ हतारी यथाक्रमं विक्रमशोभिनौ तौ ।  
 विस्पष्टमस्नान्धतया न दृष्टौ ज्ञातौ सुतस्पर्शसुखोपलम्भात् ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आनन्दजः शोकजमश्रु बाष्पस्तयोरशीतं शिशिरो बिभेद ।  
 गङ्गासरय्वोर्जलमुष्णतप्तं हिमाद्रिनिस्यन्द इवावतीर्णः ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ते पुत्रयोर्नैर्ऋतशस्त्रमार्गानार्द्रानिवाङ्गे सदयं स्पृशन्त्यौ ।  
 अपीप्सितं क्षत्रकुलाङ्गनानां न वीरसूशब्दमकामयेताम् ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्लेशावहा भर्तुरलक्षणाहं सीतेति नाम स्वमुदीरयन्ती ।  
 स्वर्गप्रतिष्ठस्य गुरोर्महिष्यावभक्तिभेदेन वधूर्ववन्दे ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उत्तिष्ठ वत्से! ननु सानुजोऽसौ वृत्तेन भर्ता शुचिना तवैव ।  
 कृच्छ्रं महत्तीर्ण इति प्रियार्हां तामूचतुस्ते प्रियमप्यमिथ्या ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथाभिषेकं रघुवंशकेतोः प्रारब्धमानन्दजलैर्जनन्योः ।  
 निर्वर्तयामासुरमात्यवृद्धास्तीर्थाहृतैः काञ्चनकुम्भतोयैः ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सरित्समुद्रान्सरसीश्च गत्वा रक्षःकपीन्द्रैरुपपादितानि ।  
 तस्थापतन्मूर्ध्नि जलानि जिष्णोर्विन्ध्यस्य मेघप्रभवा इवापः ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तपस्विवेषक्रिययापि तावद्यः प्रेक्षणीयः सुतरां बभूव ।  
 राजेन्द्रनेपथ्यविधानशोभा तस्योदितासीत्पुनरुक्तदोषा ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स मौलरक्षोहरिभिः सैसन्यस्तूर्यस्वनानन्दितपौरवर्गः ।  
 विवेश सौधोद्गतलाजवर्षामुत्तोरणामन्वयराजधानीम् ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सौमित्रिणा सावरजेन मन्दमाधूतबालव्यजनो रथस्थः ।  
 धृतातपत्रो भरतेन साक्षादुपायसंघात इव प्रवृद्धः ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रासादकालागुरुधूमराजिस्तस्याः पुरो वायुवशेन भिन्ना ।  
 वनान्निवृत्तेन रघूत्तमेन मुक्ता स्वयं वेणिरिवाबभासे ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्वश्रूजनानुषअठितचारुवेषां कर्णीरथस्थां रघुवीरपत्नीम् ।  
 प्रासादवातायनदृशअयबन्धैः साकेतनार्योऽञ्जलिभिः प्रणेमुः ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्फुरत्प्रभामण्डलमानसूयं सा ब्रिभ्रती शाश्वतमङ्गरागम् ।  
 रराज शुद्धेति पुनः स्वपुर्यै संदर्शिता वह्निगतेव भर्त्रा ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वेश्मानि रामः परिबर्हवन्ति विश्राण्य सौहार्दनिधिः सुहृद्भ्यः ।  
 बाष्पायमाणो बलिमन्निकेतमालेख्यशेषस्य पितुर्विवेश ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कृताञ्जलिस्तत्र यदम्ब! सत्यान्नाभ्रश्यत स्वर्गफलाद्गुरुर्नः ।  
 तञ्चिन्त्यमानं सुकृतं तवेति जहार लज्जां भरतस्य मातुः ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तथैव सुग्रीवबिभीषणादीनुपाचरत्कृत्रिमसंविधाभिः ।  
 संकल्पमात्रोदितसिद्धयस्ते क्रान्ता यथा चेतसि विस्मयेन ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सभाजनायोपगतान्स दिव्यान्मुनीन्पुरस्कृत्य हतस्य शत्रोः ।  
 शुश्राव तेभ्यः प्रभवादि वृत्तं स्वविक्रमे गौरवमादधानम् ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रतिप्रयातेषु तपोधनेषु सुखादविज्ञातगतार्धमासान् ।  
 सीतास्वहस्तोपहृताग्र्यपूजान्रक्षःकपीन्द्रान्विससर्ज रामः ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तञ्चात्मचिन्तासुलभं विमानं हृतं सुरारेः सह जीवितेन ।  
 कैलासनाथोद्वहनाय भूयः पुष्पं दिवः पुष्पकमन्वमंस्त ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पितुर्नियोगाद्वनवासमेवं निस्तीर्य रामः प्रतिपन्नराज्यः ।  
 धर्मार्थकामषु समां प्रपेदे यथा तथैवावरजेषु वृत्तिम् ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सर्वासु मातृष्वपि वत्सलत्वात्स निर्विशेषप्रतिपत्तिरासीत् ।  
 षडाननापीतपयोधरासु नेता चमूनामिव कृत्तिकासु ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेनार्थवाँल्लोभपराङ्मुखेन तेन घ्नता विघ्नभयं क्रियावान् ।  
 तेनास लोकः पितृमान्विनेत्रा तेनैव शोकापनुदेव पुत्री ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स पौरकार्याणि समीक्ष्य काले रेमे विदेहाधिपतेर्दुहित्रा ।  
 उपस्थितश्चारु वपुस्तदीयं कृत्वोपभोगोत्सुकयेव लक्ष्म्या ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तयोर्यथाप्रार्थितमिन्द्रियार्थानासेदुषोः सद्मसु चित्रवत्सु ।  
 प्राप्तानि दुःखान्यपि दण्डकेषु संचिन्त्यमानानि सुखान्यभूवन् ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथाधिकस्निग्धविलोचनेन मुखेन सीता शरपाण्डुरेण ।  
 आनन्दयित्री परिणेतुरासीदनक्षरव्यञ्जितदोहदेन ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तामङ्कमारोप्य कृशाङ्गयष्टं वर्णान्तराक्रान्तपयोधराग्राम् ।  
 विलज्जमानां रहसि प्रतीतः पप्रच्छ रामां रमणोऽभिलाषम् ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सा दष्टनीवारबलीनि हिंस्रैः संबद्धवैखानसकन्यकानि ।  
 इयेष भूयः कुशवन्ति गन्तुं भागीरथीतीरतपोवनानि ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यै प्रतिश्रुत्य रघुप्रवीरस्तदीप्सितं पार्श्वचरानुयातः ।  
 आलोकयिष्यन्मुदितामयोध्यां प्रासादमभ्रंलिहमारुरोह ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ऋद्धापणं राजपथं स पश्यन्विगाह्यमानां सरयूं च नौभिः ।  
 विलासिभिश्चाध्युषितानि पौरैः पुरोपकण्ठोपवनानि रेमे ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स किंवदन्तीं वदतां पुरोगः स्ववृत्तमुद्दिश्य विशुद्धवृत्तः ।  
 स र्पाधिराजोरुभुजोऽपसर्पं पप्रच्छ भद्रं विजितारिभद्रः ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निर्बन्धपृष्टः स जगाद सर्वं स्तुवन्ति पौराश्चरितं त्वदीयम् ।  
 अन्यत्र रक्षोभवनोषितायाः परिग्रहान्मानवदेव! देव्याः ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कलत्रनिन्दागुरुणा किलैवमभ्याहतं कीर्तिविपर्ययेण ।  
 अयोघनेनाय इवाभितप्तं वैदेहिबन्धोर्हृदयं विदद्रे ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 किमात्मनिर्वादकथामुपेक्षे जायामदोषामुत संत्यजामि ।  
 इत्येकपक्षाश्रयविक्लवत्वादासीत्स दोलाचलचित्तवृत्तिः ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निश्चित्य चानन्यनिवृत्ति वाच्यं त्यागेन पत्न्याः परिमार्ष्टुमैच्छत् ।  
 अपि स्वदेहात्किमुतेन्द्रियार्थाद्यशोधनानां हि यशो गरीयः ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स संनिपात्यावरजान्हतौजास्तद्विक्रियादर्शनलुप्तहर्षान् ।  
 कौलीनमात्माश्रयमाचचक्षे तेभ्यः पुनश्चेदमुवाच वाक्यम् ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 राजर्षिवंशस्य रविप्रसूतेरुपस्थितः पश्यत कीदृशोऽयम् ।  
 मत्तः सदाचारशुचेः कलङ्कः पयोदवातादिव दर्पणस्य ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पौरेषु सोऽहं बहुलीभवन्तमपां तरंगेष्विव तैलबिन्दुम् ।  
 सोढुं न तत्पूर्वमवर्णमीशे आलानिकं स्थाणुमिव द्विपेन्द्रः ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यापनोदाय फलप्रवृत्तावुपस्थितायामपि निर्व्यपेक्षः ।  
 त्यक्ष्यामि वैदेहसुतां पुरस्तात्समुद्रनेमिं पितुराज्ञयेव ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ननु सर्वथा साध्वीं न त्याज्येत्यत्राह-  
 अवैमि चैनामनघेति किंतु लोकापवादो बलवान्मतो मे ।  
 छाया हि भूमेः शशिनो मलत्वेनारोपिता शुद्धिमतः प्रजाभिः ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रक्षोवधान्तो न च मे प्रयासो व्यर्थः स वैरप्रतिमोचनाय ।  
 अमर्षणः शोणितकाङ्क्षया किं पदा स्पृशन्तं दशति द्विजिह्वः ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदेष सर्गः करुणार्द्रचित्तैर्न मे भवद्भिः प्रतिषेधनीयः ।  
 यद्यर्थिता निहृतवाच्यशल्यान्प्राणान्मया धारयितुं चिरं वः ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इत्युक्तवन्तं जनकात्मजायां नितान्तरूक्षाभिनिवेशमीशम् ।  
 न कश्चन भ्रातृषु तेषु शक्तो निषेद्धुमासीदनुमोदितुं वा ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स लक्ष्मणं लक्ष्मणपूर्वजन्मा विलोक्य लोकत्रयगीतकीर्तिः ।  
 सौम्येति चाभाष्य यथार्थभाषी स्थितं निदेशे पृथगादिदेश ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रजावती दोहदशंसिनी ते तपोवनेषु स्पृहयालुरेव ।  
 स त्वं रथी तद्व्यपदेशनेयां प्रापय्य वाल्मीकिपदं त्यजैनाम् ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स शुश्रुवान्मातरि भार्गवेण पितुर्नियोगात्प्रहृतं द्विषद्वत् ।  
 प्रत्यग्रहीदग्रजशासनं तदाज्ञा गुरूणां ह्यविचारणीया ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथानुकूलश्रवणप्रतीतामत्रस्नुभिर्युक्तधुरं तुरंगैः ।  
 रथं सुमन्त्रप्रतिपन्नरश्मिमारोप्य वैदेहसुतां प्रतस्थे ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सा नीयमाना रुचिरान्प्रदेशान्प्रियंकरो मे प्रिय इत्यनन्दत् ।  
 नाबुद्ध कल्पद्रुमतां विहाय जातं तमात्मन्यसिपत्रवृक्षम् ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जुगूह तस्याः पथि लक्ष्मणो यत्सव्येतरेण स्फुरता तदक्ष्णा ।  
 आखअयातमस्यै गुरु भावि दुःखमत्यन्तलुप्तप्रियदर्शनेन ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सा दुर्निमित्तोपगताद्विषादात्सद्यःपरिम्लानमुखारविन्दा ।  
 राज्ञः शिवं सावरजस्य भूयादित्याशशंसे करणैरबाह्यैः ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 गुरोर्नियोगाद्वनितां वनान्ते साध्वीं सुमित्रातनयो विहास्यन् ।  
 अवार्यतेवोत्थितवीचिहस्तैर्जह्नोर्दुहित्रा स्थितया पुरस्तात् ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रथात्स यन्त्रा निगृहीतवाहात्तां भ्रातृजायां पुलिनेऽवतार्य ।  
 गङ्गां निषादाहृतनौविशेषस्ततार संधामिव सत्यसंधः ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अथ व्यवस्थापितवाक्कथंचित्सौमित्रिरन्तर्गतबाष्पकण्ठः ।  
 औत्पातिकं मेघ इवाश्मवर्षं महीपतेः शासनमुज्जगार ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततोऽभिषङ्गानिलविप्रविद्धा प्रभ्रश्यमानाभरणप्रसूना ।  
 स्वमूर्तिलाभप्रकृतिं धरित्रीं लतेव सीता सहसा जगाम ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इक्ष्वाकुवंशप्रभवः कथं त्वां त्यजेदकस्मात्पतिरार्यवृत्तः ।  
 इति क्षितिः संशयितेव तस्यै ददौ प्रवेशं जननी न तावत् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सा लुप्तसंज्ञा न विवेद दुःखं प्रत्यागतासुः समतप्यतान्तः ।  
 तस्याः सुमित्रात्मजयत्नलब्धो मोहादभूत्कष्टतरः प्रबोधः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न चावदद्भर्तुरवर्णमार्या निराकरिष्णोर्वृजिनादृतेऽपि ।  
 आत्मानमेव स्थिरदुःखभाजं पुनः पुनर्दुष्कृतिनं निनिन्द ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
   
   
 आश्वास्य रामावरजः सतीं तामाख्यातवाल्मीकिनिकेतमार्गः ।  
 निघ्नस्य मे भर्तृनिदेशरौक्ष्यं देवि! क्षमस्वेति बभूव नम्रः ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सीता तमुत्थाप्य जगाद वाक्यं प्रीतास्मि ते सौम्य! चिराय जीव ।  
 बिडौजसा विष्णुरिवाग्रजेन भ्रात्रा यदित्थं परवानसि त्वम् ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 श्वश्रूजनं सर्वमनुक्रमेण विज्ञापय प्रापितमत्प्रणामः ।  
 प्रजानिषेकं मयि वर्तमानं सूनोरनुधअयायत चेतसेति ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वाच्यस्त्वया मद्वचनात्स राजा वह्नौ विशुद्धामपि यत्समक्षम् ।  
 मां लोकवादश्रवणादहासीः श्रुतस्य किं तत्सदृशं कुलस्य ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कल्याणबुद्धेरथवा तवायं न कामचारो मयि शङ्कनीयः ।  
 ममैव जन्मान्तरपातकानां विपाकविस्फूर्जथुरप्रसह्यः ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उपस्थितां पूर्वमपास्य लक्ष्मीं वनं मया सार्धमसि प्रपन्नः ।  
 तदास्पदं प्राप्य तयातिरोषात्सोढास्मि न त्वद्भवने वसन्ती ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निशाचरोपप्लुतभर्तृकाणां तपस्विनीनां भवतः प्रसादात् ।  
 भूत्वा शरण्या शरणार्थमन्यं कथं प्रपत्स्ये त्वयि दीप्यमाने ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 किंवा तवात्यन्तवियोगमोघे कुर्यामुपेक्षां हतजीवितेऽस्मिन् ।  
 स्याद्रक्षणीयं यदि मे न तेजस्त्वदीयमन्तर्गतमन्तरायः ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 साहं तपः सूर्यनिविष्टदृषअटिरूर्ध्वं प्रसूतेश्चरितुं यतिष्ये ।  
 भूयो यथा मे जजान्तरेऽपि त्वमेव भर्ता न च विप्रयोगः ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नृपस्य वर्णाश्रमपालनं यत्स एव ध्रर्मो मनुना प्रणीतः ।  
 निर्वासिताप्येवमतस्त्वयाहं तपस्विसामान्यमवेक्षणीया ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तथेति तस्याः प्रतिगृह्य वाचं रामानुजे दृष्टिपथं व्यतीते ।  
 सा मुक्तकण्ठं व्यसनातिभराञ्चक्रन्द विग्नां कुररीव भूयः ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नृत्यं मयूराः कुसुमानि वृक्षा दर्भानुपात्तान्विजहुर्हरिण्यः ।  
 तस्याः प्रपन्ने समदुःखभावमत्यन्तमासीद्रुदितं वनेऽपि ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तामभ्यगच्छद्रुदितानुसारी कविः कुशेध्माहरणाय यातः ।  
 निषादविद्धआण्डजदर्शनोत्थः श्लोकत्वमापद्यत यस्य शोकः ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमश्रु नेत्रावरणं प्रमृज्य सीता विलापाद्विरता ववन्दे ।  
 तस्यै मुनिर्दोहदलिङ्गदर्शी दाश्वान्सुपुत्राशिषमित्युवाच ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जाने विसृष्टां प्रणिधानतस्त्वां मिथ्यापवादक्षुभितेन भर्त्रा ।  
 तन्मा व्यथिष्ठा विषयान्तरस्थं प्राप्तासि वैदेहि! पितुर्निकेतम् ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 उत्खातलोकत्रयकण्टकेऽपि सत्यप्रतिज्ञेऽप्यविकत्थनेऽपि ।  
 त्वां प्रत्यकस्मात्कलुषप्रवृत्तावस्त्येव मन्युर्भरताग्रजे मे ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/73.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तवोरुकीर्तिः श्वशुरः सखा मे सतां भवोच्छेदकरः पिता ते ।  
 धुरि स्थिता त्वं पतिदेवतानां किं तन्न येनासि ममानुकम्प्या ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तपस्विसंसर्गविनीतसत्त्वे तपोवने वीतभया वसास्मिन् ।  
 इतो भविष्यत्यनघप्रसूतेरपत्यसंस्कारमयो विधिस्ते ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अशून्यतीरां मुनिसंनिवेशैस्तमोपहन्त्रीं तमसां वगाह्य ।  
 तत्सैकतोत्सङ्गबलिक्रियाभिः संपत्स्यते ते मनसः प्रसादः ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पुष्पं फलं चार्तवमाहरन्त्यो बीजं च बालेयमकृष्टरोहि ।  
 विनोदयिष्यन्ति नवाभिषङ्गामुदारवाचो मुनिकन्यकास्त्वाम् ॥ 77 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/77.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/77.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पयोघटैराश्रमबालवृक्षान्संवर्धयन्ती स्वबलानुरूपैः ।  
 असंशयं प्राक्तनयोपपत्तेः स्तनंधयप्रीतिमवाप्स्यसि त्वम् ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अनुग्रहप्रत्यभिनन्दिनीं तां वाल्मीकिरादाय दयार्द्रचेताः ।  
 सायं मृगाध्यासितवेदिपार्श्वं स्वमाश्रमं शान्तमृगं निनाय ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तामर्पयामास च शोकदीनां तदागमप्रीतिषु तापसीषु ।  
 निर्विष्टसारां पितृभिर्हिमांशोरन्त्यां कलां दर्श इवौषधीषु ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ता इङ्गुदीस्नेहकृतदप्रदीपमास्तीर्णमेध्याजिनतल्पमन्तः ।  
 तस्यै सपर्यानुपदं दिनान्दे निवासहेतोरुटजं वितेरुः ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्राभिषेकप्रयता वसन्ती प्रयुक्तपूजा विधिनातिथिभ्यः ।  
 वन्येन सा वल्कलिनी शरीरं पत्युः प्रजासंततये बभार ॥ 82 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/82.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/82.md"  newLevelForH1="4" includeTitle="true"> </div>
   
   
 अपि प्रभुः सानुशयोऽधुना स्यात्किमुत्सुकः शक्रजितोऽपि हन्ता ।  
 शशंस सीतापरिदेवनान्तमनुष्ठितं शासनमग्रजाय ॥ 83 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/83.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/83.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 बभूव रामः सहसा सबाष्पस्तुषारवर्षीव सहस्यचन्द्रः ।  
 कौलीनभीतेन गृहान्निरस्ता न तेन वैदेहसुता मनस्तः ॥ 84 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/84.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/84.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 निगृह्य शोकं स्वयमेव धीमान्वर्णाश्रमावेक्षणजागरूकः ।  
 स भ्रातृसाधारणभोगमृद्धं राज्यं रजोरिक्तमनाः शशास ॥ 85 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/85.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/85.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तामेकभार्यां परिवादभीरोः साध्वीमपि त्यक्तवतो नृपस्य ।  
 वक्षस्यसंघट्टसुखं वसन्ती रेजे सपत्नीरहितेव लक्ष्मीः ॥ 86 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/86.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/86.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सीतां हित्वा दशमुखरिपुर्नोपयेमे यदन्यां  
       तस्या एव प्रतिकृतिसखो यत्क्रतूनाजहार ।  
 वृत्तान्तेन श्रवणविषयप्रापिणा तेन भर्तुः  
       सा दुर्वारं कथमपि परित्यागदुःखं विषेहे ॥ 87 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/87.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/87.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायां चतुर्दशः सर्गः ।  
     
