--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17.md
@@ -9,330 +9,330 @@ title = "१७"
 कुर्वन्ति कुमुदप्रीतिमरण्यगृहमेधिनः ॥  
 अतिथिं नाम काकुत्स्थात्पुत्रं प्राप कुमुद्वती ।  
 पश्चिमाद्यामिनीयामात्प्रसादमिव चेतना ॥ 1 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/01.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/01.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स पितुः पितृमान्वंशं मातुश्चानुपमद्युतिः ।  
 अपुनात्सवितेवोभौ मार्गावुत्तरदक्षिणौ ॥ 2 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/02.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/02.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तमादौ कुलविद्यानामर्थमर्थविदां वरः ।  
 पश्चात्पार्थिवकन्यानां पाणिमग्राहयत्पिता ॥ 3 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/03.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/03.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 जात्यस्तेनाभिजातेन शूरः शौर्यवता कुशः ।  
 अमन्यतैकमात्मानमनेकं वशिना वशी ॥ 4 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/04.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/04.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स कुलोचितमिन्द्रस्य साहायकमुपेयिवान् ।  
 जघान समरे दैत्यं दुर्जयं तेन चावधि ॥ 5 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/05.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/05.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं स्वसा नागराजस्य कुमुदस्य कुमुद्वती ।  
 अन्वगात्कुमुदानन्दं शशाङ्कमिव कौमुदी ॥ 6 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/06.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/06.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तयोर्दिवस्पतेरासीदेकः सिंहासनार्धभाक् ।  
 द्वितीयापि सखी शच्याः पारिजातांशभागिनी ॥ 7 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/07.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/07.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तदात्मसंभवं राज्ये मन्त्रिवृद्धाः समादधुः ।  
 स्मरन्तः पश्चिमामाज्ञां भर्तुः सङ्ग्रामयायिनः ॥ 8 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/08.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/08.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ते तस्य कल्पयामासुरभिषेकाय शिल्पिभिः ।  
 विमानं नवमुद्वेदि चतुःस्तम्भप्रतिष्ठितम् ॥ 9 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/09.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/09.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तत्रैनं हेमकुम्भेषु संभृतैस्तीर्थवारिभिः ।  
 उपतस्थुः प्रकृतयो भद्रपीठोपवेशितम् ॥ 10 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/10.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/10.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नदद्भिः स्निग्धगम्भीरं तूर्यैराहतपुष्करैः ।  
 अन्वमीयत कल्याणं तस्याविच्छिन्नसंतति ॥ 11 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/11.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/11.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दूर्वायवाङ्कुरप्लक्षत्वगभिन्नपुटोत्तरान् ।  
 ज्ञातिवृद्धैः प्रयुक्तान्स भेजे नीराजनाविधीन् ॥ 12 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/12.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/12.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पुरोहितपुरोगास्तं जिष्णुं जैत्रैरथर्वभिः ।  
 उपचक्रमिरे पूर्वमभिषेक्तुं द्विजातयः ॥ 13 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/13.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/13.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यौघमहती मूर्ध्नि निपतन्ती व्यरोचत ।  
 सशब्दमभिषेकश्रीर्गङ्गेव त्रिपुरद्विषः ॥ 14 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/14.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/14.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्तूयमानः क्षणे तस्मिन्नलक्ष्यत स बन्दिभिः ।  
 प्रवृद्ध इव पर्जन्यः सारङ्गैरभिनन्दितः ॥ 15 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/15.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/15.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्य सन्मन्त्रपूताभिः स्नानमद्भिः प्रतीच्छतः ।  
 ववृधे वैद्युतस्याग्नेर्वृष्टिसेकादिव द्युतिः ॥ 16 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/16.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/16.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स तावदभिषेकान्ते स्नातकेभ्यो ददौ वसु ।  
 यावतैषां समाप्येरन्यज्ञाः पर्याप्तदक्षिणाः ॥ 17 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/17.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/17.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ते प्रीतमनसस्तस्मै यामाशिषमुदैरयन् ।  
 सा तस्य कर्मनिर्वृत्तर्दूरं पश्चात्कृता फलैः ॥ 18 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/18.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/18.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 बन्धच्छेदं स बद्धानां वधार्हाणामवध्यताम् ।  
 धुर्याणां च धुरो मोक्षमदोहं चादिशद्गवाम् ॥ 19 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/19.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/19.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 क्रीडापतत्रिणोऽप्यस्य पञ्जरस्थाः शुकादयः ।  
 लब्धमोक्षास्तदादेशाद्यथेष्टगतयोऽभवन् ॥ 20 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/20.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/20.md"  newLevelForH1="4" includeTitle="true"> </div>
   
  ततः कक्ष्यान्तरन्यस्तं गजदन्तासनं शुचि ।  
 सोत्तरच्छदमध्यास्त नेपथ्यग्रहणाय सः ॥ 21 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/21.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/21.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं धूपाश्यानकेशान्तं तोयनिर्णिक्तपाणयः ।  
 आकल्पसाधनैस्तैस्तैरुपसेदुः प्रसाधकाः ॥ 22 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/22.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/22.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तेऽस्य मुक्तागुणोन्नद्धं मौलिमन्तर्गतस्रजम् ।  
 प्रत्यूपुः पद्मरागेण प्रभामण्डलशोभिना ॥ 23 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/23.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/23.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 चन्दनेनाङ्गरागं च मृगनाभिसुगन्धिना ।  
 समापय्य ततश्चक्रुः पत्रं विन्यस्तरोचनम् ॥ 24 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/24.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/24.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 आमुक्ताभरणः स्रग्वी हंसचिह्नदुकूलवान् ।  
 आसीदतिशयप्रेक्ष्यः स राज्यश्रीवधूवरः ॥ 25 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/25.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/25.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 नेपथ्यदर्शिनश्छाया तस्यादर्शे हिरण्मये ।  
 विरराजोदिते सूर्ये मेरौ कल्पतरोरिव ॥ 26 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/26.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/26.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स राजककुदव्यग्रपाणिभिः पार्श्ववर्तिभिः ।  
 ययावुदीरितालोकः सुधर्मानवमां सभाम् ॥ 27 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/27.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/27.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वितानसहितं तत्र भेजे पैतृकमासनम् ।  
 चूडामणिभिरुद्धृष्टपादपीठं महीक्षिताम् ॥ 28 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/28.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/28.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शुशुभे तेन चाक्रान्तं मङ्गलायतनं महत् ।  
 श्रीवत्सलक्षणं वक्षः कौस्तुभेनेव कैशवम् ॥ 29 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/29.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/29.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 बभौ भूयः कुमारत्वादाधिराज्यमवाप्य सः ।  
 रेखाभावादुपारूढः सामग्र्यमिव चन्द्रमाः ॥ 30 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/30.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/30.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रसन्नमुखरागं तं स्मितपूर्वाभिभाषिणम् ।  
 मूर्तिमन्तममन्यन्त विश्वासमनुजीविनः ॥ 31 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/31.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/31.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स पुरं पुरुहूतश्रीः कल्पद्रुमनिभध्वजाम् ।  
 क्रममाणश्चकार द्यां नागेनैरावतौजसा ॥ 32 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/32.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/32.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तस्यैकस्योच्छ्रितं छत्रं मूर्ध्नि तेनामलत्विषा ।  
 पूर्वराजवियोगौष्म्यं कृत्स्नस्य जगतो हृतम् ॥ 33 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/33.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/33.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 धूमादग्नेः शिखाः पश्चादुदयादंशवो रवेः ।  
 सोऽतीत्य तेजसां वृत्तिं समयेवोत्थितो गुणैः ॥ 34 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/34.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/34.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तं प्रीतिविशदैर्नेत्रैरन्वयुः पौरयोषितः ।  
 शरत्प्रसन्नैर्ज्योतिर्भिर्विभावर्य इव ध्रुवम् ॥ 35 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/35.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/35.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अयोध्यादेवताश्चैनं प्रशस्तायतनार्चिताः ।  
 अनुदध्युरनुध्येयं सांनिध्यैः प्रतिमागतैः ॥ 36 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/36.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/36.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यावन्नाश्यायते वेदिरभिषेकजलाप्लुताः ।  
 तावदेवास्य वेलान्तं प्रतापः प्राप दुःसहः ॥ 37 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/37.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/37.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वसिष्ठस्य गुरोर्मन्त्राः सायकास्तस्य धन्विनः ।  
 किं तत्साध्यं यदुभये साधयेयुर्न संगताः ॥ 38 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/38.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/38.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स धर्मस्थसखः शश्वदर्थिप्रत्यर्थिनां स्वयम् ।  
 ददर्श संशयच्छेद्यान्व्यवहारानतन्द्रितः ॥ 39 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/39.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/39.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ततः परमभिव्यक्तसौमनस्यनिवेदितैः ।  
 युयोज पाकाभिमुखैर्भृत्यान्विज्ञापनाफलैः ॥ 40 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/40.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/40.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रजास्तद्गुरुणा नद्यो नभसेव विवर्धिताः ।  
 तस्मिंस्तु भूयसीं वृद्धिं नभस्ये ता इवाययुः ॥ 41 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/41.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/41.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 यदुवाच न तन्मिथ्या यद्वदौ न जहार तत् ।  
 सोऽभूद्भग्नव्रतः शत्रूनुद्धृत्य प्रतिरोपयन् ॥ 42 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/42.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/42.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वयोरूपविभूतीनामेकैकं मदकारणम् ।  
 तानि तस्मिन्समस्तानि न तस्योत्सिषिचे मनः ॥ 43 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/43.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/43.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इत्थं जनितरागासु प्रकृतिष्वनुवासरम् ।  
 अक्षोभ्यः स नवोऽप्यासीद्दृढमूल इव द्रुमः ॥ 44 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/44.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/44.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अनित्याः शत्रवो बाह्या विप्रकृष्टाश्च ते यतः ।  
 अतः सोऽभ्यन्तरान्नित्याञ्षट्पूर्वमजयद्रिपून् ॥ 45 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/45.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/45.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रसादाभिमुखे तस्मिंश्चपलापि स्वभावतः ।  
 निकषे हेमरेखेव श्रीरासीदनपायिनी ॥ 46 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/46.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/46.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कातर्यं केवला नीतिः शौर्यं श्वापदचेष्टितम् ।  
 अतः सिद्धिं समेताभ्यामुभाभ्यामन्वियेष सः ॥ 47 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/47.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/47.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न तस्य मण्डले राज्ञो न्यस्तप्रणिधिदीधितेः ।  
 अदृष्टमभवत्किंचिद्व्यभ्रस्येव विवस्वतः ॥ 48 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/48.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/48.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 रात्रिंदिवविभागेषु यदादिष्टं महीक्षिताम् ष।  
 तत्सिषेवे नियोगेन स विकल्पपराङ्मुखः ॥ 49 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/49.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/49.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 मन्त्रः प्रतिदिनं तस्य बभूव सह मन्त्रिभिः ।  
 स जातु सेव्यमानोऽपि गुप्तद्वारो न सूच्यते ॥ 50 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/50.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/50.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 परेषु स्वेषु च क्षिप्तैरविज्ञातपरस्परैः ।  
 सोऽपसर्पैर्जजागार यथाकालं स्वपन्नपि ॥ 51 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/51.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/51.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दुर्गाणि दुर्ग्राहाण्यासंस्तस्य रोद्धुरपि द्विषाम् ।  
 न हि सिंहो गजास्कन्दी भयाद्गिरिगुहाशयः ॥ 52 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/52.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/52.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 भव्यमुख्याः समारम्भाः प्रत्यवेक्ष्यानिरत्ययाः ।  
 गर्भशालिसधर्माणस्तस्य गूढं विपेचिरे ॥ 53 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/53.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/53.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 अपथेन प्रववृते न जातूपचितोऽपि सः ।  
 वृद्धौ नदीमुखेनैव प्रस्थानं लवणाम्भसः ॥ 54 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/54.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/54.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कामं प्रकृतिवैराग्यं सद्यः शमयितुं क्षमः ।  
 यस्य कार्यः प्रतीकारः स तन्नैवोदपादयत् ॥ 55 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/55.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/55.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 शक्येष्वेवाभवद्यात्रा तस्य शक्तिमतः सतः ।  
 समीरणसहायोऽपि नाम्भःप्रार्थी दवानलः ॥ 56 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/56.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/56.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 न धर्ममर्थकामाभ्यां बबाधे न च तेन तौ ।  
 नार्थं कामेन कामं वा सोऽर्थेन सदृशस्त्रिषु ॥ 57 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/57.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/57.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 हीनान्यनुपकर्तॄणि प्रवृद्धानि विकुर्वते ।  
 तेन मध्यमशक्तीनि मित्राणि स्थापितान्यतः ॥ 58 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/58.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/58.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 'शक्येष्वेवाभवद्यात्रा'(1716) इत्यादिनोक्तमर्थं सोपस्मारमाह-  
 परात्मनोः परिच्छिद्य शक्त्यादीनां बलाबलम् ।  
 ययावेभिर्मलिष्ठश्चेत्परस्मादास्त सोऽन्यथा ॥ 59 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/59.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/59.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कोशेनाश्रयणीयत्वमिति तस्यार्थसंग्रहः ।  
 अम्बुगर्भो हि जीमूतशअचातकैरभिनन्द्यते ॥ 60 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/60.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/60.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 परकर्मापहः सोऽभूदुद्यतः स्वेषु कर्मसु ।  
 आवृणोदात्मनो रन्ध्रं रन्ध्रेषु प्रहरन्रिपून् ॥ 61 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/61.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/61.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पित्रा संवर्धितो नित्यं कृतास्त्रः सांपरायिकः ।  
 तस्य दण्डवतो दण्डः स्वदेहान्न व्यशिष्यत ॥ 62 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/62.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/62.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सर्पस्येव शिरोरत्नं नास्य शक्तित्रयं परः ।  
 स चकर्ष परस्मात्तदयस्कान्त इवायसम् ॥ 63 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/63.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/63.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 वापीष्विव स्रवन्तीषु वनेषूपवनेष्विव ।  
 सार्थीः स्वैरं स्वकीयेषु चेरुर्वेश्मस्विवाद्रिषु ॥ 64 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/64.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/64.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 तपो रक्षन्स विघअनेभ्यस्तस्करेभ्यश्च संपदः ।  
 यथास्वमाश्रमैश्चक्रे वर्णैरपि षडंशभाक् ॥ 65 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/65.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/65.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 खनिभिः सुषुवे रत्नं क्षेत्रैः सस्यं वनैर्गजान् ।  
 दिदेश वेतनं तस्मै रक्षासदृशमेव भूः ॥ 66 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/66.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/66.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स गुणानां बलानां च षण्णां षण्मुखविक्रमः ।  
 बभूव विनियोगज्ञः साधनीयेषु वस्तुषु ॥ 67 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/67.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/67.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति क्रमात्प्रयुञ्जानो राजनीतिं चतुर्विधाम् ।  
 आ तीर्थादप्रतीघातं स तस्याः फलमानशे ॥ 68 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/68.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/68.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 कूटयुद्धविधिज्ञेऽपि तस्मिन्सन्मार्गयोधिनि ।  
 मेजेऽभिसारिकावृत्तिं जयश्रीर्वीरगामिनी ॥ 69 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/69.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/69.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रायः प्रतापभग्नत्वादरीणां तस्य दुर्लभः ।  
 रणो गन्धद्विपस्येव गन्धभिन्नान्यदन्तिनः ॥ 70 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/70.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/70.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 प्रवृद्धौ हीयते चन्द्रः समुद्रोऽपि तथाविधः ।  
 स तु तत्समवृद्धिश्च न चाभूत्ताविव क्षयी ॥ 71 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/71.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/71.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 सन्तस्तस्याभिगमनादत्यर्थं महतः कृशाः ।  
 उदधेरिव जीमूताः प्रापुर्दातृत्वमर्थिनः ॥ 72 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/72.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/72.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 स्तूयमानः स जिह्नाय स्तुत्यमेव समाचरन् ।  
 तथापि ववृधे तस्य तत्कारिद्वेषिणो यशः ॥ 73 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/73.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/73.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दुरितं दर्शनेन घ्नंस्तत्त्वार्थेन नुदंस्तमः ।  
 प्रजाः स्वतन्त्रयांचक्रे शश्वत्सूर्य इवोदितः ॥ 74 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/74.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/74.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इन्दोरगतयः पद्मे सूर्यस्य कुमुऽदेंशवः ।  
 गुणास्तस्य विपक्षेऽपि गुणिनो लेभिरेऽन्तरम् ॥ 75 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/75.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/75.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पराभिसंधानपरं यद्यप्यस्य विचेष्टितम् ।  
 जिगीषोरश्वमेधाय धर्म्यमेव बभूव तत् ॥ 76 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/76.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/76.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 एवमुद्यन्प्रभावेण शास्त्रनिर्दिष्टवर्त्मना ।  
 वृषेव देवो देवानां राज्ञां राजा बभूव सः ॥ 77 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/77.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/77.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 पञ्चमं लोकपालानां तमूचुः साम्ययोगतः ।  
 भूतानां महतां षष्ठमष्टमं कुलभूताम् ॥ 78 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/78.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/78.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 दूरापवर्जितच्छत्रैस्तस्याज्ञां शासनार्पिताम् ।  
 दधुः शिरोभिर्भूपाला देवाः पौरंदरीमिव ॥ 79 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/79.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/79.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 ऋत्विजः स तथानर्च दक्षिणाभिर्महाक्रतौ ।  
 यथा साधारणीभूतं नामास्य धनदस्य च ॥ 80 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/80.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/80.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इन्द्राद्वृष्टिर्नियमितगदोद्रेकवृत्तिर्यमोऽभू-  
       द्यादोनाथः शिवजलपथः कर्मणे नौचराणाम् ।  
 पूर्वापेक्षी तदनु विदधे कोषवृद्धिं कुबेर-  
        स्तस्मिन्दण्डोपनतचरितं भेजिरे लोकपालाः ॥ 81 ॥  
-<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/81.md"  newLevelForH1="4"> </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/17/81.md"  newLevelForH1="4" includeTitle="true"> </div>
   
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायां सप्तदशः सर्गः ।  
 
